修改两条消息的副标题
修改两条消息的副标题，以及新的对照表。

--- a/_posts/2021-07-28-来自哈儿实验室苏维埃的消息.md
+++ b/_posts/2021-07-28-来自哈儿实验室苏维埃的消息.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      来自哈儿实验室苏维埃的消息
-subtitle:   G Haer Labotiy sovet d nev
+subtitle:   G Haer Labotiy Sovet d Nev
 date:       2021-7-28
 author:     Haer Labotiy
 header-img: img/home-bg-o.jpg
