--- a/_posts/2021-07-30-对于网站的决定.md
+++ b/_posts/2021-07-30-对于网站的决定.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      对于网站的决定
-subtitle:   G Haer Labotiy sovet d nev
+subtitle:   Fangak Vebat d Komanda
 date:       2021-7-30
 author:     Haer Labotiy
 header-img: img/home-bg-o.jpg
