--- a/_posts/2021-07-28-来自哈儿实验室苏维埃的消息.md
+++ b/_posts/2021-07-28-来自哈儿实验室苏维埃的消息.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy
 header-img: img/home-bg-o.jpg
 catalog: true
 tags:
-    - 消息-Nev
+    - 测试-Test
 ---
 
 亲爱的同志们，据哈儿苏维埃社会主义共和国肃反委员会报告，**G-094** 同志于7月4日遇刺身亡，
