--- a/_posts/2021-07-30-对于网站的决定.md
+++ b/_posts/2021-07-30-对于网站的决定.md
@@ -4,7 +4,7 @@ title:      对于网站的决定
 subtitle:   Fangak Vebat d Komanda
 date:       2021-7-30
 author:     Haer Labotiy
-header-img: img/home-bg-o.jpg
+header-img: img/home-bg-he.png
 catalog: true
 tags:
     - 消息-Nev
