更正消息的一处错误
更正消息的一处错误：哈儿语中没有“c”字母，因此已将其替换为“ts”。

--- a/_posts/2021-08-25-来自哈儿苏维埃社会主义共和国最高苏维埃的消息.md
+++ b/_posts/2021-08-25-来自哈儿苏维埃社会主义共和国最高苏维埃的消息.md
@@ -36,4 +36,4 @@ Fuk ukekkeblazon (2020 lev 11 vlota 1 dlota-2021 lev 8 vlota 31 dlota) veda sekh
 
 哈儿苏维埃社会主义共和国国歌（2020年11月1日——）：***《国际歌》***。
 
-Haer Sovet Sotsialism Respublik ufekkekant (2020 lev 11 vlota 1 dlota-): ***Internaci Kant***.
+Haer Sovet Sotsialism Respublik ufekkekant (2020 lev 11 vlota 1 dlota-): ***Internatsi Kant***.
