--- a/_posts/2021-08-25-来自哈儿苏维埃社会主义共和国最高苏维埃的消息.md
+++ b/_posts/2021-08-25-来自哈儿苏维埃社会主义共和国最高苏维埃的消息.md
@@ -10,9 +10,9 @@ tags:
     - 消息-Nev
 ---
 
-今早，哈儿苏维埃社会主义共和国第二届最高苏维埃第四次会议通过了关于修改哈儿苏维埃社会主义共和国国徽的议案，哈儿实验室06分部苏维埃递交的编号为Labotiy-06-149的作品被采用。新的国徽将于提季提格勒时间（UTC -5）2021年9月1日零时正式生效，届时须在全国范围内完成国徽的更换。为了保证国徽不被误用，我们将附上新国徽的[标准矢量图](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-Emblem.svg)以及[png格式的图片](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-Emblem.png)。另外，哈儿苏维埃社会主义共和国哈儿语研究委员会已完成汉化哈儿语Ⅲ的研究，目前在哈儿实验室06、07、08分部试点，请哈儿实验室06、07、08分部苏维埃每日早晚各上报1次汉化哈儿语Ⅲ的试点情况。
+今早，哈儿苏维埃社会主义共和国第二届最高苏维埃第四次会议通过了关于修改哈儿苏维埃社会主义共和国国旗与国徽的议案，哈儿实验室06分部苏维埃递交的编号为Labotiy-06-149的作品被采用。新的国旗国徽将于提季提格勒时间（UTC -5）2021年9月1日零时正式生效，届时须在全国范围内完成国旗国徽的更换。为了保证国旗国徽不被误用，我们将发布新国旗国徽的标准矢量图以及png格式的图片。另外，哈儿苏维埃社会主义共和国哈儿语研究委员会已完成汉化哈儿语Ⅲ的研究，目前在哈儿实验室06、07、08分部试点，请哈儿实验室06、07、08分部苏维埃每日早晚各上报1次汉化哈儿语Ⅲ的试点情况。
 
-Lis uzuk, Haer Sovet Sotsialism Respublik 2 Genum (Sep-Genum) Voe Ak Sovet 4 genum (veh-genum) zizst fehiu abet frekvdog Haer Sovet Sotsialism Respublik ukekkeblazonv d ost, Haer Labotiy 06-genum (ez-ro-genum) foreton sovet zagruzova d genum veda Labotiy-06-149 d prozveden wasev ŭya. Nev ukekkeblazon wilav t Tiśitigrad klota (UTC -5, eʔ nya foreton) 2021 lev 9 vlota 1 dlota 0 klota (ez-klota) trekvdog vedaʔ, klotaś stag t alak ufekke igz betafroz ukekkeblazon d anstataŭig. Ket garantŭ ukekkeblazon neh wasev frek ŭya, yayi wilav alig nev ukekkeblazon d [shtandart vektor bild](https://openg-qkmb.github.io/haerssr/Haer%20SSR-Emblem.svg) bev [png shtandart d bild](https://openg-qkmb.github.io/haerssr/Haer%20SSR-Emblem.png). Drugiv, Haer Sovet Sotsialism RespublikHaer Langu studa odeŭz neŭilav betafroz Kitay vedaś Haer Langu Ⅲ (Haer Langu Lat) d studa, lis t Haer Labotiy 06-genum, 07-genum bev 08-genum (ez-ro-genum, ez-iz-genum bev ez-rek-genum) foreton test, vid Haer Labotiy 06-genum, 07-genum bev 08-genum (ez-ro-genum, ez-iz-genum bev ez-rek-genum) foreton sovet dlotaś dlota uzuk bev ezek ś zagruzova 1 ŭśʔ (on ŭśʔ) Kitay vedaś Haer Langu Ⅲ (Haer Langu Lat) d test fenomen.
+Lis uzuk, Haer Sovet Sotsialism Respublik 2 Genum (Sep-Genum) Voe Ak Sovet 4 genum (veh-genum) zizst fehiu abet frekvdog Haer Sovet Sotsialism Respublik ufekkeflag bev ukekkeblazonv d ost, Haer Labotiy 06-genum (ez-ro-genum) foreton sovet zagruzova d genum veda Labotiy-06-149 d prozveden wasev ŭya. Nev ufekkeflag bev ukekkeblazon wilav t Tiśitigrad klota (UTC -5, eʔ nya foreton) 2021 lev 9 vlota 1 dlota 0 klota (ez-klota) trekvdog vedaʔ, klotaś stag t alak ufekke igz betafroz ufekkeflag bev ukekkeblazon d anstataŭig. Ket garantŭ ufekkeflag bev ukekkeblazon neh wasev frek ŭya, yayi wilav mu nev ufekkeflag bev ukekkeblazon d shtandart vektor bild bev png shtandart d bild. Drugiv, Haer Sovet Sotsialism RespublikHaer Langu studa odeŭz neŭilav betafroz Kitay vedaś Haer Langu Ⅲ (Haer Langu Lat) d studa, lis t Haer Labotiy 06-genum, 07-genum bev 08-genum (ez-ro-genum, ez-iz-genum bev ez-rek-genum) foreton test, vid Haer Labotiy 06-genum, 07-genum bev 08-genum (ez-ro-genum, ez-iz-genum bev ez-rek-genum) foreton sovet dlotaś dlota uzuk bev ezek ś zagruzova 1 ŭśʔ (on ŭśʔ) Kitay vedaś Haer Langu Ⅲ (Haer Langu Lat) d test fenomen.
 
 
 
@@ -22,11 +22,17 @@ Lis uzuk, Haer Sovet Sotsialism Respublik 2 Genum (Sep-Genum) Voe Ak Sovet 4 gen
 
 Haer Sovet Sotsialism Respublik ukekkeblazon (2021 lev 9 vlota 1 dlota-), v Haer Labotiy 06-genum (ez-ro-genum) foreton haer prozveś legopoʔ razokharovaniye suk yefidrov.
 
+![Haer Sovet Sotsialism Respublik ufekkeflag](https://openg-qkmb.github.io/haerssr/Haer%20SSR.png)
+
+哈儿苏维埃社会主义共和国国旗（2021年9月1日——）长宽比为2:1。
+
+Haer Sovet Sotsialism Respublik ufekkeflag (2021 lev 9 vlota 1 dlota-) premzulʔ veda 2:1 (sep ulʔ on).
+
 ![Haer Sovet Sotsialism Respublik ufekkeflag](https://openg-qkmb.github.io/haerssr/Haer%20SSR-First.png)
 
-哈儿苏维埃社会主义共和国国旗（2020年11月1日——）长宽比为2:1，旗面为纯红色。红色为**#CC0000**。
+哈儿苏维埃社会主义共和国国旗（2020年11月1日——2021年8月31日）长宽比为2:1，旗面为纯红色。红色为**#CC0000**。
 
-Haer Sovet Sotsialism Respublik ufekkeflag (2020 lev 11 vlota 1 dlota-) premzulʔ veda 2:1 (sep ulʔ on), flag veda alakaʔ sekhi. Sekhi veda **#CC0000**.
+Haer Sovet Sotsialism Respublik ufekkeflag (2020 lev 11 vlota 1 dlota-2021 lev 8 vlota 1 dlota) premzulʔ veda 2:1 (sep ulʔ on), flag veda alakaʔ sekhi. Sekhi veda **#CC0000**.
 
 ![Haer Sovet Sotsialism Respublik前 ukekkeblazon](https://openg-qkmb.github.io/haerssr/Haer%20SSR-First-Emblem.png)
 
