--- a/_posts/2021-08-25-来自哈儿苏维埃社会主义共和国最高苏维埃的消息.md
+++ b/_posts/2021-08-25-来自哈儿苏维埃社会主义共和国最高苏维埃的消息.md
@@ -30,9 +30,9 @@ Haer Sovet Sotsialism Respublik ufekkeflag (2021 lev 9 vlota 1 dlota-) premzulʔ
 
 ![Haer Sovet Sotsialism Respublik ufekkeflag](https://openg-qkmb.github.io/haerssr/Haer%20SSR-First.png)
 
-哈儿苏维埃社会主义共和国国旗（2020年11月1日——2021年8月31日）长宽比为2:1，旗面为纯红色。红色为**#CC0000**。
+前国旗（2020年11月1日——2021年8月31日）长宽比为2:1，旗面为纯红色。红色为**#CC0000**。
 
-Haer Sovet Sotsialism Respublik ufekkeflag (2020 lev 11 vlota 1 dlota-2021 lev 8 vlota 1 dlota) premzulʔ veda 2:1 (sep ulʔ on), flag veda alakaʔ sekhi. Sekhi veda **#CC0000**.
+Fuk ufekkeflag (2020 lev 11 vlota 1 dlota-2021 lev 8 vlota 1 dlota) premzulʔ veda 2:1 (sep ulʔ on), flag veda alakaʔ sekhi. Sekhi veda **#CC0000**.
 
 ![Haer Sovet Sotsialism Respublik前 ukekkeblazon](https://openg-qkmb.github.io/haerssr/Haer%20SSR-First-Emblem.png)
 
