--- a/_posts/2021-08-26-哈儿苏维埃社会主义共和国国家象征.md
+++ b/_posts/2021-08-26-哈儿苏维埃社会主义共和国国家象征.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      哈儿苏维埃社会主义共和国国家象征
 subtitle:   Haer Sovet Sotsialism Respublik Ufekke Yevarovʔ
-date:       2021-8-25
+date:       2021-8-26
 author:     Haer Sovet Sotsialism Respublik Voe Ak Sovet bev Govera
 header-img: img/home-bg-he.png
 catalog: true
@@ -24,9 +24,9 @@ tags:
 
 Haer Sovet Sotsialism Respublik ukekkeblazon (2021 lev 9 vlota 1 dlota-), v Haer Labotiy 06-genum (ez-ro-genum) foreton haer prozveś legopoʔ razokharovaniye suk yefidrov.
 
-[矢量图下载/vektor bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-Emblem.svg)
+[矢量图下载/vektor bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-Emblem.svg) [PNG格式图像下载/png shtandart d bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-Emblem.png)
 
-[PNG格式图像下载/png shtandart d bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-Emblem.png)
+
 
 
 
@@ -36,9 +36,9 @@ Haer Sovet Sotsialism Respublik ukekkeblazon (2021 lev 9 vlota 1 dlota-), v Haer
 
 Haer Sovet Sotsialism Respublik ufekkeflag (2021 lev 9 vlota 1 dlota-) premzulʔ veda 2:1 (sep ulʔ on).
 
-[矢量图下载/vektor bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR.svg)
+[矢量图下载/vektor bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR.svg) [PNG格式图像下载/png shtandart d bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR.png)
 
-[PNG格式图像下载/png shtandart d bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR.png)
+
 
 
 
@@ -48,7 +48,11 @@ Haer Sovet Sotsialism Respublik ufekkekant (2020 lev 11 vlota 1 dlota-): ***Inte
 
 
 
+
+
 ---------------------------------------
+
+
 
 
 
@@ -60,9 +64,9 @@ Haer Sovet Sotsialism Respublik ufekkekant (2020 lev 11 vlota 1 dlota-): ***Inte
 
 Fuk ufekkeflag (2020 lev 11 vlota 1 dlota-2021 lev 8 vlota 1 dlota) premzulʔ veda 2:1 (sep ulʔ on), flag veda alakaʔ sekhi. Sekhi veda **#CC0000**.
 
-[矢量图下载/vektor bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-First.svg)
+[矢量图下载/vektor bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-First.svg) [PNG格式图像下载/png shtandart d bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-First.png)
 
-[PNG格式图像下载/png shtandart d bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-First.png)
+
 
 
 
@@ -72,6 +76,4 @@ Fuk ufekkeflag (2020 lev 11 vlota 1 dlota-2021 lev 8 vlota 1 dlota) premzulʔ ve
 
 Fuk ukekkeblazon (2020 lev 11 vlota 1 dlota-2021 lev 8 vlota 31 dlota) veda sekhi tik nyakśʔ. Sekhi veda **#CC0000**.
 
-[矢量图下载/vektor bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-First-Emblem.svg)
-
-[PNG格式图像下载/png shtandart d bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-First-Emblem.png)
+[矢量图下载/vektor bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-First-Emblem.svg) [PNG格式图像下载/png shtandart d bild nagruzova](https://github.com/hssrgov/hssrgov.github.io/releases/download/v0.0.0/Haer.SSR-First-Emblem.png)
