修改一则消息
添加了西里尔哈儿语版本，以后这将会成为通常做法。

--- a/_posts/2021-09-19-强烈谴责.md
+++ b/_posts/2021-09-19-强烈谴责.md
@@ -13,3 +13,5 @@ tags:
 昨日，哈儿实验室克里瓦斯特市分部在对网站的例行检查时发现，在[CSDN下载的其中一个项目](https://download.csdn.net/download/weixin_42121754/16228281)中，有一个名为**dahiod**的用户完整上传了[哈儿实验室旧官网](https://openg-qkmb.github.io)的内容，并设置为付费下载。这是极其无耻的资本主义行为，是最卑劣的小资产阶级对无产者的压迫，是解放全人类的公敌。哈儿实验室严肃地要求**dahiod**立刻删除并保证不再有此类行为。哈儿实验室在此表示最强烈的谴责，勿谓言之不预也。
 
 Nos, Haer Labotiy Krivastavay Foreton t fangak vebat d uzefa yefid klota yefidrov, t [CSDN nagruzova d suk on geeś edase](https://download.csdn.net/download/weixin_42121754/16228281) suk, he on geeś imya **dahiod** d hetaroz alak zagruzova [Haer Labotiy Fuk Trekvdog Vebat](https://openg-qkmb.github.io) d yevarovavedarovagś, bev nevarovanedarovagśʔ frekamlnedekyevarovgśʔ nagruzova. Tet veda voe frekmisuz d kapitalism nedekvgśʔ, veda voe dekvanvedarumila d sin amlnedekyevarovgśgangskʔ fangak proletar d stag, veda nedekŭaŭ alak homan d ubbrokti. Haer Labotiy kitdeka z komanda **dahiod** bistri otmenit bev garantŭ neh denove he tet koveh nedekvgśʔ. Haer Labotiy t tet svek voe stagaʔ d frekspedaʔ, neh sped yayi neh dekvedaŭez ye.
+
+Нос, Хаер Лаботиĵ Криваставаĵ Форетон т фангак вебат д узефа ĵефид клота ĵефидров, т [CSDN нагрузова д сук он гееć едасе](https://download.csdn.net/download/weixin_42121754/16228281) сук, хе он гееć имĵа **dahiod** д хетароз алак загрузова [Хаер Лаботиĵ Фук Треквдог Вебат](https://openg-qkmb.github.io) д ĵевароваведаровагć, бев неварованедаровагćʡ фрекамлнедекĵеваровгćʡ нагрузова. Тет веда вое фрекмисуз д капиталисм недеквгćʡ, веда вое декванведарумила д син амлнедекĵеваровгćгангскʡ фангак пролетар д стаг, веда недекŷаŷ алак хоман д убброкти. Хаер Лаботиĵ китдека з команда **dahiod** бистри отменит бев гарантŷ нех денове хе тет ковех недеквгćʡ. Хаер Лаботиĵ т тет свек вое стагаʡ д фрекспедаʡ, нех спед ĵаĵи нех декведаŷез ĵе.
