--- a/_posts/2021-10-01-关于G-6054-18K同志职务变更的通知.md
+++ b/_posts/2021-10-01-关于G-6054-18K同志职务变更的通知.md
@@ -4,7 +4,7 @@ title:      关于G-6054-18K同志职务变更的通知
 subtitle:   Abet G-6054-18K Tovarishkh Petas Reforma d Mu | Абет Г-6054-18К Товарисхкх Петас Реформа д Му
 date:       2021-10-1
 author:     A-8139-21B
-header-img: img/uf2.jpg
+header-img: img/uf2.png
 catalog: true
 tags:
     - 消息-Nev-Нев
