--- a/_posts/2021-10-10-职务调动及部门改动.md
+++ b/_posts/2021-10-10-职务调动及部门改动.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      职务调动及部门改动
-subtitle:   Abet Rekvdoga Haer Ufekke Ufekkekant d Komanda
+subtitle:   Petas bev Foreton Reforma | Петас бев Форетон Реформа
 date:       2021-10-10
 author:     Haer Labotiy
 header-img: img/home-bg-o.jpg
@@ -15,7 +15,7 @@ tags:
 &nbsp;&nbsp;&nbsp;&nbsp;经哈儿实验室苏维埃通过，任**G-6054-18K**为哈儿实验室苏维埃副主席、哈儿共产党中央委员会第一副书记、哈儿工人红军战时司令委员会副主席；**L-1917-11S**为哈儿实验室苏维埃主席行政团总代表、哈儿共产党中央委员会第二副书记、哈儿工人红军战时司令委员会作战计划制定团总代表；**S-1945-08P**为哈儿实验室苏维埃主席行政团委员、哈儿共产党中央委员会第三副书记、哈儿工人红军战时司令委员会作战计划制定团委员。  
 &nbsp;&nbsp;&nbsp;&nbsp;经相关同志的表决通过，决定将哈儿国文件审查委员会与哈儿国肃反委员会合并为哈儿国国家安全委员会，各级文件审查委员会及各级肃反委员会应当同步合并为各级国家安全委员会。  
 &nbsp;&nbsp;&nbsp;&nbsp;以上决定自发布之时起生效。
-<div style="text-align: right">哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>A-8139-21B<br>2021年10月1日</div>
+<div style="text-align: right">哈儿实验室苏维埃主席<br>哈儿共产党中央委员会总书记<br>哈儿工人红军战时司令委员会主席<br>A-8139-21B<br>2021年10月10日</div>
 
 # Haer Langu
 Alak tovarishkh:  
