--- a/_posts/2021-10-10-关于修改哈儿国国歌的决定.md
+++ b/_posts/2021-10-10-关于修改哈儿国国歌的决定.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      关于修改哈儿国国歌的决定
-subtitle:   Abet Rekvdoga Haer Ufekke Ufekkekant d Komanda
+subtitle:   Abet Rekvdoga Haer Ufekke Ufekkekant d Komanda | Абет Реквдога Хаер Уфекке Уфеккекант д Команда
 date:       2021-10-10
 author:     Haer Sovet Sotsialism Respublik Voe Ak Sovet
 header-img: img/home-bg-o.jpg
@@ -20,10 +20,10 @@ tags:
 Alak Haer Ufekke tovarishkh:  
 &nbsp;&nbsp;&nbsp;&nbsp;T razokharovaniye sommey **G-094** ismya śepeta buk, yay fangak Haer Ufekke ś gangsk sovet vedarov reforma. Prokhodyashkhi Haer Ufekke Genum Lat Voe Ak Sovet Genum On Zizst fehiu, komanda rekvdoga Haer Ufekke ufekkekant. Fuk Ufekkekant ***Internatsi Kant*** reforma v **S-1945-08P** tovarishkh bev sep haer yefidrov kantŭore d ***Haer Sovet Sotsialism Respublik Ufekkekant***, Haer Labotiy Kant klisakask reforma.  
 &nbsp;&nbsp;&nbsp;&nbsp;Ŭuk komanda ŭilav t 2021 lev 10 vlota 15 dlota 0 klota vedaʔ.
-<div style="text-align: right">Haer Sovet Sotsialism Respublik Voe Ak Sovet Yemani Yeman<br>L-9218-73Z<br>2021 Lev 10 Vlota 1 Dlota</div>
+<div style="text-align: right">Haer Sovet Sotsialism Respublik Voe Ak Sovet Yemani Yeman<br>L-9218-73Z<br>2021 Lev 10 Vlota 10 Dlota</div>
 
 # Кирива Хаер Лангу
 Алак Хаер Уфекке товарисхкх:  
 &nbsp;&nbsp;&nbsp;&nbsp;Т разокхарованиĵе соммеĵ **Г-094** исмĵа ćепета бук, ĵаĵ фангак Хаер Уфекке ć гангск совет ведаров реформа. Прокходĵасхкхи Хаер Уфекке Генум Лат Вое Ак Совет Генум Он Зизст фехиу, команда реквдога Хаер Уфекке уфеккекант. Фук Уфеккекант ***Интернатси Кант*** реформа в **С-1945-08П** товарисхкх бев сеп хаер ĵефидров кантŷоре д ***Хаер Совет Сотсиалисм Республик Уфеккекант***, Хаер Лаботиĵ Кант клисакаск реформа.  
 &nbsp;&nbsp;&nbsp;&nbsp;Ŷук команда ŷилав т 2021 лев 10 влота 15 длота 0 клота ведаʡ.
-<div style="text-align: right">Хаер Совет Сотсиалисм Республик Вое Ак Совет Ĵемани Ĵеман<br>Л-9218-73З<br>2021 Лев 10 Влота 1 Длота</div>
+<div style="text-align: right">Хаер Совет Сотсиалисм Республик Вое Ак Совет Ĵемани Ĵеман<br>Л-9218-73З<br>2021 Лев 10 Влота 10 Длота</div>
