--- a/_posts/2021-10-17-关于哈儿国最高苏维埃主席团令.md
+++ b/_posts/2021-10-17-关于哈儿国最高苏维埃主席团令.md
@@ -10,7 +10,7 @@ tags:
     - 声明-Svek-Свек
 ---
 
-# 对哈儿国全国紧急状态的说明
+# 关于哈儿国最高苏维埃主席团令
 全体同志们：  
 &nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室全力支持哈儿国最高苏维埃主席团令，**A-8139-21B**同志对**OpenG-qkmb**同志表示祝贺与热烈欢迎。
 <div style="text-align: right">哈儿实验室苏维埃主席行政团<br>2021年10月17日</div>
