--- a/_posts/2021-07-30-对于网站的决定.md
+++ b/_posts/2021-07-30-对于网站的决定.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy
 header-img: img/home-bg-he.png
 catalog: true
 tags:
-    - 消息-Nev-Нев
+    - 消息-Нев
 ---
 
 我们仅会在本页面发布更新的消息，以前的文章保留在原位置，但不会发布在[原网站](https://openg-qkmb.github.io/)上。
