--- a/_posts/2021-08-25-来自哈儿苏维埃社会主义共和国最高苏维埃的消息.md
+++ b/_posts/2021-08-25-来自哈儿苏维埃社会主义共和国最高苏维埃的消息.md
@@ -7,7 +7,7 @@ author:     Haer Sovet Sotsialism Respublik Voe Ak Sovet bev Govera
 header-img: img/home-bg-he.png
 catalog: true
 tags:
-    - 消息-Nev-Нев
+    - 消息-Нев
 ---
 
 今早，哈儿苏维埃社会主义共和国第二届最高苏维埃第四次会议通过了关于修改哈儿苏维埃社会主义共和国国旗与国徽的议案，哈儿实验室06分部苏维埃递交的编号为Labotiy-06-149的作品被采用。新的国旗国徽将于提季提格勒时间（UTC -5）2021年9月1日零时正式生效，届时须在全国范围内完成国旗国徽的更换。为了保证国旗国徽不被误用，我们将发布新国旗国徽的标准矢量图以及png格式的图片。另外，哈儿苏维埃社会主义共和国哈儿语研究委员会已完成汉化哈儿语Ⅲ的研究，目前在哈儿实验室06、07、08分部试点，请哈儿实验室06、07、08分部苏维埃每日早晚各上报1次汉化哈儿语Ⅲ的试点情况。
