--- a/_posts/2021-09-19-强烈谴责.md
+++ b/_posts/2021-09-19-强烈谴责.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy
 header-img: img/post-web.jpg
 catalog: true
 tags:
-    - 声明-Svek-Свек
+    - 声明-Свек
 ---
 
 昨日，哈儿实验室克里瓦斯特市分部在对网站的例行检查时发现，在[CSDN下载的其中一个项目](https://download.csdn.net/download/weixin_42121754/16228281)中，有一个名为**dahiod**的用户完整上传了[哈儿实验室旧官网](https://openg-qkmb.github.io)的内容，并设置为付费下载。这是极其无耻的资本主义行为，是最卑劣的小资产阶级对无产者的压迫，是解放全人类的公敌。哈儿实验室严肃地要求**dahiod**立刻删除并保证不再有此类行为。哈儿实验室在此表示最强烈的谴责，勿谓言之不预也。
