--- a/_posts/2021-09-21-关于哈儿实验室数据库.md
+++ b/_posts/2021-09-21-关于哈儿实验室数据库.md
@@ -7,7 +7,7 @@ author:     S-2231-63D
 header-img: img/uf1.jpg
 catalog: true
 tags:
-    - 消息-Nev-Нев
+    - 消息-Нев
 ---
 
 哈儿实验室的[旧网站](https://openg-qkmb.github.io/)已被废弃，但[哈儿实验室数据库](https://openg-qkmb.github.io/access/show.html)会一直保留。届时我们将把哈儿实验室数据库迁移至本网站，并更名为“哈儿实验室危险哈儿数据库”。另外，我们近期将邀请一些同志为我们开设“共产主义学习”栏目。
