--- a/_posts/2021-10-06-紧急通知.md
+++ b/_posts/2021-10-06-紧急通知.md
@@ -7,7 +7,7 @@ author:     A-8139-21B
 header-img: img/uf1.jpg
 catalog: true
 tags:
-    - 命令-Komanda-Команда
+    - 命令-Команда
 ---
 
 现任哈儿实验室苏维埃副主席、哈儿共产党中央委员会第一副主席、哈儿工人红军战时司令委员会副主席**S-2231-63D**因健康原因无法继续履行其职责，其职务暂由现任哈儿实验室苏维埃主席行政团总代表、哈儿共产党中央委员会第二副书记、哈儿工人红军战时司令委员会作战计划制定团总代表**G-6054-18K**代理。现任哈儿实验室苏维埃主席行政团委员、哈儿共产党中央委员会第三副主席、哈儿工人红军战时司令委员会委员**L-1917-11S**协助完成**G-6054-18K**的工作。
