--- a/_posts/2021-10-10-关于修改哈儿国国歌的决定.md
+++ b/_posts/2021-10-10-关于修改哈儿国国歌的决定.md
@@ -7,7 +7,7 @@ author:     Haer Sovet Sotsialism Respublik Voe Ak Sovet
 header-img: img/home-bg-o.jpg
 catalog: true
 tags:
-    - 命令-Komanda-Команда
+    - 命令-Команда
 ---
 
 # 中文
