--- a/_posts/2021-10-10-职务调动及部门改动.md
+++ b/_posts/2021-10-10-职务调动及部门改动.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy
 header-img: img/home-bg-o.jpg
 catalog: true
 tags:
-    - 命令-Komanda-Команда
+    - 命令-Команда
 ---
 
 # 中文
