--- a/_posts/2021-10-17-关于哈儿国最高苏维埃主席团令.md
+++ b/_posts/2021-10-17-关于哈儿国最高苏维埃主席团令.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/home-bg-o.jpg
 catalog: true
 tags:
-    - 声明-Svek-Свек
+    - 声明-Свек
 ---
 
 # 关于哈儿国最高苏维埃主席团令
@@ -17,10 +17,10 @@ tags:
 
 # Abet Haer Ufekke Voe Ak Sovet Yemani Komanda
 Alak tovarishkh:  
-&nbsp;&nbsp;&nbsp;&nbsp;Haer Labotiy uksepvaspeda poleznostAbet Haer Ufekke Voe Ak Sovet Yemani Komanda, **A-8139-21B** tovarishkh fangak **OpenG-qkmb** tovarishkh svek lekkzorova bev uksepvaspeda vtrekanaigzsk.
+&nbsp;&nbsp;&nbsp;&nbsp;Haer Labotiy uksepvaspeda poleznost Haer Ufekke Voe Ak Sovet Yemani Komanda, **A-8139-21B** tovarishkh fangak **OpenG-qkmb** tovarishkh svek lekkzorova bev uksepvaspeda vtrekanaigzsk.
 <div style="text-align: right">Haer Labotiy Sovet Yemanpolitikapetasiy<br>2021 Lev 10 Vlota 17 Dlota</div>
 
 # Абет Хаер Уфекке Вое Ак Совет Ĵемани Команда
 Алак товарисхкх:  
-&nbsp;&nbsp;&nbsp;&nbsp;Хаер Лаботиĵ уксепваспеда полезностАбет Хаер Уфекке Вое Ак Совет Ĵемани Команда, **А-8139-21Б** товарисхкх фангак **ОпенГ-ккмб** товарисхкх свек леккзорова бев уксепваспеда втреканаигзск.
+&nbsp;&nbsp;&nbsp;&nbsp;Хаер Лаботиĵ уксепваспеда полезност Хаер Уфекке Вое Ак Совет Ĵемани Команда, **А-8139-21Б** товарисхкх фангак **ОпенГ-ккмб** товарисхкх свек леккзорова бев уксепваспеда втреканаигзск.
 <div style="text-align: right">Хаер Лаботиĵ Совет Ĵеманполитикапетасиĵ<br>2021 Лев 10 Влота 17 Длота</div>
