--- a/_posts/2021-10-17-对哈儿国全国紧急状态的说明.md
+++ b/_posts/2021-10-17-对哈儿国全国紧急状态的说明.md
@@ -7,7 +7,7 @@ author:     L-9218-73Z
 header-img: img/home-bg-o.jpg
 catalog: true
 tags:
-    - 命令-Komanda-Команда
+    - 命令-Команда
 ---
 
 # 对哈儿国全国紧急状态的说明
