--- a/_posts/2021-11-01-中央职务调动说明.md
+++ b/_posts/2021-11-01-中央职务调动说明.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/1970.jpg
 catalog: true
 tags:
-    - 消息-Nev-Нев
+    - 消息-Нев
 ---
 
 # 中央职务调动说明
