--- a/_posts/2021-11-07-关于设立国家计划委员会的决定.md
+++ b/_posts/2021-11-07-关于设立国家计划委员会的决定.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/SSRs.png
 catalog: true
 tags:
-    - 命令-Komanda-Команда
+    - 命令-Команда
 ---
 
 # 关于设立国家计划委员会的决定
