--- a/_posts/2021-11-21-职务任命.md
+++ b/_posts/2021-11-21-职务任命.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/uf2.png
 catalog: true
 tags:
-    - 命令-Komanda-Команда
+    - 命令-Команда
 ---
 
 哈儿实验室苏维埃主席行政团令：  
