--- a/_posts/2021-12-07-哈儿实验室06分部危险哈儿销毁通知书公示.md
+++ b/_posts/2021-12-07-哈儿实验室06分部危险哈儿销毁通知书公示.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy 06 Foreton Sovet
 header-img: img/SSRs.png
 catalog: true
 tags:
-    - 消息-Nev-Нев
+    - 消息-Нев
 ---
 
 参见哈儿实验室06分部对危险哈儿团“[本源党](https://hssrgov.github.io/access/index.html?haer=35)”的销毁通知书。
