--- a/_posts/2021-09-12-哈儿苏维埃社会主义共和国宪法已公布.md
+++ b/_posts/2021-09-12-哈儿苏维埃社会主义共和国宪法已公布.md
@@ -7,7 +7,7 @@ author:     A-8139-21B
 header-img: img/home-bg-he.png
 catalog: true
 tags:
-    - 消息-Nev-Нев
+    - 消息-Нев
 ---
 
 中文：昨日，哈儿苏维埃社会主义共和国第二届最高苏维埃非常第五次会议通过了《哈儿苏维埃社会主义共和国宪法》，现予公布中文版本。
