--- a/_posts/2021-10-24-紧急通知：炼钢党炸平山头.md
+++ b/_posts/2021-10-24-紧急通知：炼钢党炸平山头.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy
 header-img: img/uf1.jpg
 catalog: true
 tags:
-    - 消息-Nev-Нев
+    - 消息-Нев
 ---
 
 详情参见炼钢党高级领导人**莼恭绫**的记述。
