--- a/_posts/2021-11-14-危险哈儿销毁令.md
+++ b/_posts/2021-11-14-危险哈儿销毁令.md
@@ -7,7 +7,7 @@ author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/uf1.jpg
 catalog: true
 tags:
-    - 命令-Komanda-Команда
+    - 命令-Команда
 ---
 
 # 危险哈儿销毁令
