--- a/_posts/2021-12-20-紧急状态结束.md
+++ b/_posts/2021-12-20-紧急状态结束.md
@@ -4,7 +4,7 @@ title:      紧急状态结束
 subtitle:   Декведан Веданз Уоретнех
 date:       2021-12-20
 author:     Хаер Лаботий Совет Эманполитикапетасий
-header-img: img/home-bg-o.jpg
+header-img: img/uf1.jpg
 catalog: true
 tags:
     - 命令-Команда
