添加一条消息
rt

--- a/_posts/2021-12-26-哈儿实验室徽章公布.md
+++ b/_posts/2021-12-26-哈儿实验室徽章公布.md
@@ -21,7 +21,7 @@ tags:
 # Хаер Лаботий Блазон Едимюскяи
 Хаер Лаботий Совет Эман команда:  
 &nbsp;&nbsp;&nbsp;&nbsp;Хаер Лаботий Совет лис фехию алакверитпета эфидров д Хаер Лаботий Блазон, лис едимюскяи.
-<div style="text-align: right">Хаер Лаботий Совет Эман<br>ОпенГ-ккмб<br>2021 Лев 12 Влота 26 Длота</div>  
+<div style="text-align: right">Хаер Лаботий Совет Эман<br>ОпенГ-ккмб<br>2021 Лев 26 Хдекабре</div>  
 Алиг: Хаер Лаботий Блазон  
 ![Хаер Лаботий Блазон](https://hssrgov.github.io/files/Haer_Lab-Emblem.png)  
 Нагрюзова: [PNG Штандарт](https://hssrgov.github.io/files/Haer_Lab-Emblem.png) [SVG Штандарт](https://hssrgov.github.io/files/Haer_Lab-Emblem.svg)
