--- a/_posts/2021-12-19-紧急状态结束.md
+++ b/_posts/2021-12-19-紧急状态结束.md
@@ -22,4 +22,4 @@ tags:
 &nbsp;&nbsp;&nbsp;&nbsp;Хаер Лаботий Совет спедтрек связани текст, команда лау фюк апорма уоретнех Хаер Совет Социалисм Респюблик алакюфекке декведан веданз, бев уасеврок связани поюмон загрюзова р Хаер Совет Социалисм Респюблик Вое Ак Совет.  
 &nbsp;&nbsp;&nbsp;&nbsp;Хаер Лаботий Совет команда, уоретнех уя Латин Хаер Щаяз бев Кирива Хаер Щаяз, т игз Хаер Юфекке алекюфекке бев Хаер Лаботий уя Хаер Юфекке Щаяз Ёрета Одеуз (Фюк Хаер Щаяз Қалазь Одеуз) т 2021 лев 12 влота 19 длота фехию д «Нев Хаер Щаяз (Кирива Хаер Щаяз Ⅵ) Штандарт». Кирива Хаер Щаяз Ⅵ ведаштандаь Хаер Щаяз, юзафа имя Хаер Щаяз.  
 &nbsp;&nbsp;&nbsp;&nbsp;Уюк команда г Тижитиград клота 2021 лев 12 влота 20 длота 00:00 треквгод ведаь.
-<div style="text-align: right">Хаер Лаботий Совет Эманполитикапетасий Алаксове<br>Л-1917-11С<br>2021 Лев 12 Влота 19 Длота</div>
+<div style="text-align: right">Хаер Лаботий Совет Эманполитикапетасий Алаксове<br>Л-1917-11С<br>2021 Лев 19 Хдекабре</div>
