--- a/_posts/2021-12-31-哈儿实验室祝贺全体同志新年快乐.md
+++ b/_posts/2021-12-31-哈儿实验室祝贺全体同志新年快乐.md
@@ -12,12 +12,12 @@ tags:
 
 # 哈儿实验室祝贺全体同志新年快乐
 全体同志们：  
-&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室第五届苏维埃主席行政团今日召开第十四次全体会议，回顾了2021年的变革与发展，制定了《2022年发展计划》，为局势的进一步稳定做出规划，并为预定于2022年2月举行的哈儿实验室第六届苏维埃选举做了充分的计划与准备。  
+&nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室第二届苏维埃主席行政团今日召开第十四次全体会议，回顾了2021年的变革与发展，制定了《2022年发展计划》，为局势的进一步稳定做出规划，并为预定于2022年2月举行的哈儿实验室第三届苏维埃选举做了充分的计划与准备。  
 &nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室苏维埃主席行政团全体成员向全体同志致以最诚挚的问候，并预祝哈儿实验室第六届苏维埃选举圆满完成。
 <div style="text-align: right">哈儿实验室苏维埃主席<br>OpenG-qkmb<br>2021年12月31日</div>
 
 # Хаер Лаботий Леккзорова Алак Товарищй Нелева Упзснах
 Алак Товарищй:  
-&nbsp;&nbsp;&nbsp;&nbsp;Хаер Лаботий Генюм Квин Совет Эманполитикапетасий лис уоретнед Генюм Декквар Уъ Алзизст, реворстю уирез 2021 лев д реформа бев недеқуела, денией уирез «2022 Лев Недеқуела Апорма», кет феномен д во недекңан апорма, бев кет цонраз т 2022 лев Хфеврале одэмас д Хаер Лаботий Генюм Сес Совет Ролект апорма бев цонраз уирез.  
+&nbsp;&nbsp;&nbsp;&nbsp;Хаер Лаботий Генюм Ду Совет Эманполитикапетасий лис уоретнед Генюм Декквар Уъ Алзизст, реворстю уирез 2021 лев д реформа бев недеқуела, денией уирез «2022 Лев Недеқуела Апорма», кет феномен д во недекңан апорма, бев кет цонраз т 2022 лев Хфеврале одэмас д Хаер Лаботий Генюм Три Совет Ролект апорма бев цонраз уирез.  
 &nbsp;&nbsp;&nbsp;&nbsp;Алак паритйпетай қам Хаер Лаботий Совет Эманполитикапетасий сн фангак алак товарищй трек з автреканаэскан, бев леккзорова Хаер Лаботий Генюм Сес Совет Ролект гонорбас корска.
 <div style="text-align: right">Хаер Лаботий Совет Эман<br>ОпенГ-ккмб<br>2021 Лев 31 Хдекабре</div>  
