--- a/_posts/2022-01-26-哈儿共产党第三届中央委员会选举完成.md
+++ b/_posts/2022-01-26-哈儿共产党第三届中央委员会选举完成.md
@@ -12,14 +12,14 @@ tags:
 
 # 哈儿共产党第三届中央委员会选举完成
 &nbsp;&nbsp;&nbsp;&nbsp;哈儿共产党第三次代表大会于昨日闭幕。全体代表在以共产主义为核心的团结一致的氛围下选举出哈儿共产党第三届中央委员会并通过了新的党章，**OpenG-qkmb**同志当选哈儿共产党中央委员会总书记。  
-&nbsp;&nbsp;&nbsp;&nbsp;**OpenG-qkmb**、**G-6054-18K**、**L-1917-11S**、**A-8139-21B**、**F-9182-00L**共5位同志当选哈儿共产党中央委员会政治局常务委员会委员。  
-&nbsp;&nbsp;&nbsp;&nbsp;**S-1945-08P**、**D-2530-60U**、**L-9218-73Z**、**K-2510-51Y**、**T-5991-54K**、**Z-2744-27Y**、**L-8233-67K**、**F-9844-35H**、**N-9382-64K**、**B-7418-65V**共10位同志当选哈儿共产党中央委员会政治局委员，**O-4819-94S**同志当选哈儿共产党中央委员会政治局候补委员。  
+&nbsp;&nbsp;&nbsp;&nbsp;**OpenG-qkmb**、**G-6054-18K**、**L-1917-11S**、**A-8139-21B**、**F-9182-00L**、**S-1945-08P**、**D-2530-60U**、**L-9218-73Z**、**K-2510-51Y**、**T-5991-54K**、**Z-2744-27Y**、**L-8233-67K**、**F-9844-35H**、**N-9382-64K**、**B-7418-65V**共15位同志当选哈儿共产党中央委员会政治局委员。  
+&nbsp;&nbsp;&nbsp;&nbsp;**O-4819-94S**同志当选哈儿共产党中央委员会政治局候补委员。  
 &nbsp;&nbsp;&nbsp;&nbsp;**M-5194-82T**同志当选哈儿共产党意识形态审察委员会主席。哈儿共产党意识形态审察委员会作为哈儿共产党中央委员会新增的直属机构，将进一步规范党员的纪律与作风。  
 <div style="text-align: right">（来自：《火炬》2022年1月26日）</div>
 
 # Хаер Коммюнисм Паритй Генюм Три Сюк Одеуз Ролект Корска
 &nbsp;&nbsp;&nbsp;&nbsp;Хаер Коммюнисм Паритй Париз Три т нос уоретнех. Алак совей т лау Коммюнисм кет сук д побназ д горкалам дюк ролект Хаер Коммюнисм Паритй Генюм Три Сюк Одеуз бев фехию нев Паритйнедеқойна, товарищ **ОпенГ-ккмб** уролект Хаер Коммюнисм Паритй Сюк Одеуз Алакровез.  
-&nbsp;&nbsp;&nbsp;&nbsp;**ОпенГ-ккмб**, **Г-6054-18К**, **Л-1917-11С**, **А-8139-21Б**, **Ф-9182-00Л** алик 5 товарищй уролект Хаер Коммюнисм Паритй Сюк Одеуз Политикапетасий Енбанрон Одеуз одеуй.  
-&nbsp;&nbsp;&nbsp;&nbsp;**С-1945-08П**, **Д-2530-60Ю**, **Л-9218-73З**, **К-2510-51Й**, **Т-5991-54К**, **З-2744-27Й**, **Л-8233-67К**, **Ф-9844-35Х**, **Н-9382-64К**, **Б-7418-65В** алик 10 товарищй уролект Хаер Коммюнисм Паритй Сюк Одеуз Политикапетасий одеуй, товарищ **О-4819-94С** уролект Хаер Коммюнисм Паритй Сюк Одеуз Политикапетасий нормаспека одеу.  
+&nbsp;&nbsp;&nbsp;&nbsp;**ОпенГ-ккмб**, **Г-6054-18К**, **Л-1917-11С**, **А-8139-21Б**, **Ф-9182-00Л**, **С-1945-08П**, **Д-2530-60Ю**, **Л-9218-73З**, **К-2510-51Й**, **Т-5991-54К**, **З-2744-27Й**, **Л-8233-67К**, **Ф-9844-35Х**, **Н-9382-64К**, **Б-7418-65В** алик 15 товарищй уролект Хаер Коммюнисм Паритй Сюк Одеуз Политикапетасий одеуй.  
+&nbsp;&nbsp;&nbsp;&nbsp;Товарищ **О-4819-94С** уролект Хаер Коммюнисм Паритй Сюк Одеуз Политикапетасий нормаспека одеу.  
 &nbsp;&nbsp;&nbsp;&nbsp;Товарищ **М-5194-82Т** уролект Хаер Коммюнисм Паритй Апормаседанң Эфид Одеуз эман. Хаер Коммюнисм Паритй Апормаседанң Эфид Одеуз неварованедаровагъ Хаер Коммюнисм Паритй Сюк Одеуз нев ңервак форетон, уилав во хойна паритйпета д елд три бев хойнақ.  
 <div style="text-align: right">(Г: «Недеквоеақинсюфрез» 2022 Лев 26 Хянваре)</div>
