--- a/_posts/2022-06-26-哈儿实验室代表提议更改国家名称.md
+++ b/_posts/2022-06-26-哈儿实验室代表提议更改国家名称.md
@@ -17,7 +17,7 @@ tags:
 来自宾拉托夫萨多斯帕拉德苏维埃社会主义自治共和国的代表集体要求废除现行宪法，并制订符合当今哈儿国情况的新宪法。会议以压倒性多数通过了他们提出的议案，该项议案还附加了督促哈儿苏维埃社会主义共和国最高苏维埃主席团组建相关委员会起草新宪法的要求。  
 来自南戈尔拉夫卡边疆自治区的几位代表在会议上表示，现行哈儿苏维埃社会主义共和国国歌曲调诡异，应当立即废除，且称其“已发现该曲抄袭《立陶宛苏维埃社会主义共和国国歌》旋律的关键证据”。部分赞成的代表还要求制订新的国旗与国徽。  
 会议进行至26日上午，会场内有哈儿代表持枪对主席团射击，该哈儿当场被击毙。目前暂无伤亡报告。主席团决定暂停会议并在全国进行为期一周的肃反。  
-«div style="text-align: right"»（来自：《光辉》2022年2月20日）«/div»  
+<div style="text-align: right">（来自：《光辉》2022年2月20日）</div>  
 
 # Хаер Лабс парставис иеросина маинит валсц носаукуму
 25. юния, пэк Тиџитијградас лаика, Републикас Падомес палата тика атклата Кетурта Хаер ССР Аугстакас падомес аркартас апвиенота санаксме, кура тика апкопота Хаер ССР пэдэя гада лаика пиереѕэта сатрикинаюму ун шӄелшанас кризе. пиењэма «Паматностаднес Хаер Советю Сокиалистискас Републикас пареяс ставокља избеигшанаи пэк иеспэяс атрак».  
@@ -26,7 +26,7 @@ tags:
 Бинлатровсадоспарад Аутономас Советю Сокиалистискас Републикас делегати колективи пиепрасия пашреизэяс конститукияс аткелшану ун яунас конститукияс пиелагошану пашреизэям Хаер ставоклим. Сэдэ ар парлиекиношу балсу парсвару тика атбалстиц вињу приекшликумс, кура бия ари лугумс мудинат Хаер ССР Аугстакас падомес Президию извеидот аттиекигу комитею яунас конститукияс изстрадеи.  
 Ваираки Югагоравкас пиеробежас аутонома апгабала парставји санаксмэ сакия, ка пашреизэя Хаер ССР химна ир диваина ун та некавэётиес яаткељ, пиебилстот, ка «ир атрасти галвение пиерадиюми пар „Лиетувас ССР валсц химнас“ мелодияс плаѓиату». Дажи делегати ари аикиная извеидот яуну карогу ун емблэму.  
 Санаксме турпинаяс лиѕ 26. датума ритам. Хаер парставји норисес виета ар иерочием шава уз президию, хаер тика ногалинац уз виетас. Пашлаик нетиек зињоц пар киетушајием. Президијс нолэма аптурэт санаксми ун веикт недэљу илгу немиерниеку тиришану виса валсти.  
-«div style="text-align: right"»(Авоц: «Радианке», 2022. гада 20. фебруарис)«/div»  
+<div style="text-align: right">(Авоц: «Радианке», 2022. гада 20. фебруарис)</div>  
   
 ![哈儿实验室2022年度授章 | Хаер Лабораторй 2022 Гада Балву](https://hssrgov.github.io/files/mid.png)  
 哈儿实验室2022年度授章
