--- a/_posts/2022-06-26-哈儿实验室代表提议更改国家名称.md
+++ b/_posts/2022-06-26-哈儿实验室代表提议更改国家名称.md
@@ -19,8 +19,8 @@ tags:
 会议进行至26日上午，会场内有哈儿代表持枪对主席团射击，该哈儿当场被击毙。目前暂无伤亡报告。主席团决定暂停会议并在全国进行为期一周的肃反。  
 <div style="text-align: right">（来自：《光辉》2022年2月20日）</div>  
 
-# Хаер Лабс парставис иеросина маинит валсц носаукуму
-25. юния, пэк Тиџитијградас лаика, Републикас Падомес палата тика атклата Кетурта Хаер ССР Аугстакас падомес аркартас апвиенота санаксме, кура тика апкопота Хаер ССР пэдэя гада лаика пиереѕэта сатрикинаюму ун шӄелшанас кризе. пиењэма «Паматностаднес Хаер Советю Сокиалистискас Републикас пареяс ставокља избеигшанаи пэк иеспэяс атрак».  
+# Хаер Лабс Парставис Иеросина Маинит Валсц Носаукуму
+Пэк Тиџитијградас лаика, 25. юния, Републикас Падомес палата тика атклата Кетурта Хаер ССР Аугстакас падомес аркартас апвиенота санаксме, кура тика апкопота Хаер ССР пэдэя гада лаика пиереѕэта сатрикинаюму ун шӄелшанас кризе. пиењэма «Паматностаднес Хаер Советю Сокиалистискас Републикас пареяс ставокља избеигшанаи пэк иеспэяс атрак».  
 Санаксмэ тика пиењемц лэмумс пиењемт «Хаер валоду программу (2022)», курас памата ир Хаер ССР Валоду дарба комитеяс иесниегта тиџитий валода, ун нолэма падарит то пар Хаер ССР офикиало валоду. Лэмумс стасиес спэка 2022. гада 1. новембри. Хаер Советю Сокиалистискас Републикас валодас дарба комитея ир веикуси яунас хэру валодас популаризэшану ун нодрошинаюси, ка веикинашанас уздевумс бутиба тикс пабеигц лиѕ октобрим.  
 Тикшанас лаика Хаер лабораторияс парставји иеросиная маинит валсц носаукуму уз «Хаер Советю Федерала Сокиалистиска Република», ка ари пасниеѕа Хаер Лабораторй 2022 гада балву, кас яу пиетеика носаукуму. Хаер ССР Аугстакас падомес Президия приекшсэдэтајс Виссарионс Андроникашвили сакия, ка пашлаик нав планоц маинит валсц носаукуму, ун керэя, ка Хаер лаборатория вэлреиз апстипринас, ваи тексц пар гада балву ир пареизс.  
 Бинлатровсадоспарад Аутономас Советю Сокиалистискас Републикас делегати колективи пиепрасия пашреизэяс конститукияс аткелшану ун яунас конститукияс пиелагошану пашреизэям Хаер ставоклим. Сэдэ ар парлиекиношу балсу парсвару тика атбалстиц вињу приекшликумс, кура бия ари лугумс мудинат Хаер ССР Аугстакас падомес Президию извеидот аттиекигу комитею яунас конститукияс изстрадеи.  
@@ -29,5 +29,5 @@ tags:
 <div style="text-align: right">(Авоц: «Радианке», 2022. гада 20. фебруарис)</div>  
   
 ![哈儿实验室2022年度授章 | Хаер Лабораторй 2022 Гада Балву](https://hssrgov.github.io/files/mid.png)  
-哈儿实验室2022年度授章
-Хаер Лабораторй 2022 Гада Балву
+<div style="text-align: right">哈儿实验室2022年度授章</div>  
+<div style="text-align: right">Хаер Лабораторй 2022 Гада Балву</div>
