每次刚提交完又发现问题，真**的无语
rt

--- a/_posts/2022-06-26-哈儿实验室代表提议更改国家名称.md
+++ b/_posts/2022-06-26-哈儿实验室代表提议更改国家名称.md
@@ -29,5 +29,5 @@ tags:
 <div style="text-align: right">(Авоц: «Радианке», 2022. гада 20. фебруарис)</div>  
   
 ![哈儿实验室2022年度授章 | Хаер Лабораторй 2022 Гада Балву](https://hssrgov.github.io/files/mid.png)  
-<div style="text-align: right">哈儿实验室2022年度授章</div>  
-<div style="text-align: right">Хаер Лабораторй 2022 Гада Балву</div>
+<div style="text-align: center">哈儿实验室2022年度授章</div>  
+<div style="text-align: center">Хаер Лабораторй 2022 Гада Балву</div>
