网站翻新（第二步）
rt

--- a/_posts/2021-07-28-来自哈儿实验室苏维埃的消息.md
+++ b/_posts/2021-07-28-来自哈儿实验室苏维埃的消息.md
@@ -5,9 +5,9 @@ subtitle:   G Haer Labotiy Sovet d Nev
 date:       2021-7-28
 author:     Haer Labotiy
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 测试-Тест
+    - 测试
 ---
 
 亲爱的同志们，据哈儿苏维埃社会主义共和国肃反委员会报告，**G-094** 同志于7月4日遇刺身亡，
