--- a/_posts/2021-09-12-哈儿苏维埃社会主义共和国宪法已公布.md
+++ b/_posts/2021-09-12-哈儿苏维埃社会主义共和国宪法已公布.md
@@ -5,9 +5,9 @@ subtitle:   Haer Sovet Sotsialism Respublik Nedekhoyna Neŭilav Mu
 date:       2021-9-12
 author:     A-8139-21B
 header-img: img/home-bg-he.png
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 中文：昨日，哈儿苏维埃社会主义共和国第二届最高苏维埃非常第五次会议通过了《哈儿苏维埃社会主义共和国宪法》，现予公布中文版本。
