--- a/_posts/2021-09-18-两则消息.md
+++ b/_posts/2021-09-18-两则消息.md
@@ -5,9 +5,9 @@ subtitle:   On Zeeś Nev
 date:       2021-9-18
 author:     Haer Labotiy
 header-img: img/home-bg-he.png
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 全力打击炼钢党
