--- a/_posts/2021-10-10-关于修改哈儿国国歌的决定.md
+++ b/_posts/2021-10-10-关于修改哈儿国国歌的决定.md
@@ -5,9 +5,9 @@ subtitle:   Abet Rekvdoga Haer Ufekke Ufekkekant d Komanda | Абет Реквд
 date:       2021-10-10
 author:     Haer Sovet Sotsialism Respublik Voe Ak Sovet
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 命令-Команда
+    - 命令
 ---
 
 # 中文
