--- a/_posts/2021-10-17-关于哈儿国最高苏维埃主席团令.md
+++ b/_posts/2021-10-17-关于哈儿国最高苏维埃主席团令.md
@@ -5,9 +5,9 @@ subtitle:   Abet Haer Ufekke Voe Ak Sovet Yemani Komanda
 date:       2021-10-17
 author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 声明-Свек
+    - 声明
 ---
 
 # 关于哈儿国最高苏维埃主席团令
