--- a/_posts/2021-10-17-对哈儿国全国紧急状态的说明.md
+++ b/_posts/2021-10-17-对哈儿国全国紧急状态的说明.md
@@ -5,9 +5,9 @@ subtitle:   Abet Haer Ufekke Alekufekke Dekvedan Vedanz d Yevarovś
 date:       2021-10-17
 author:     L-9218-73Z
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 命令-Команда
+    - 命令
 ---
 
 # 对哈儿国全国紧急状态的说明
