--- a/_posts/2021-10-24-紧急通知：炼钢党炸平山头.md
+++ b/_posts/2021-10-24-紧急通知：炼钢党炸平山头.md
@@ -5,9 +5,9 @@ subtitle:   时间紧急，无法翻译
 date:       2021-10-24
 author:     Haer Labotiy
 header-img: img/uf1.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 详情参见炼钢党高级领导人**莼恭绫**的记述。
