--- a/_posts/2021-11-01-中央职务调动说明.md
+++ b/_posts/2021-11-01-中央职务调动说明.md
@@ -5,9 +5,9 @@ subtitle:   Suk Petas Regulirovad Yevarovś
 date:       2021-11-1
 author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/1970.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 中央职务调动说明
