--- a/_posts/2021-11-07-关于设立国家计划委员会的决定.md
+++ b/_posts/2021-11-07-关于设立国家计划委员会的决定.md
@@ -5,9 +5,9 @@ subtitle:   Abet Nevarovanedarovagśʔ Ufekke Aporma Odeŭz d Komanda
 date:       2021-11-7
 author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/SSRs.png
-catalog: true
+catalog: false
 tags:
-    - 命令-Команда
+    - 命令
 ---
 
 # 关于设立国家计划委员会的决定
