--- a/_posts/2021-11-14-危险哈儿销毁令.md
+++ b/_posts/2021-11-14-危险哈儿销毁令.md
@@ -5,9 +5,9 @@ subtitle:   Uzasni Haer Kitdekvovetina Komanda
 date:       2021-11-14
 author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/uf1.jpg
-catalog: true
+catalog: false
 tags:
-    - 命令-Команда
+    - 命令
 ---
 
 # 危险哈儿销毁令
