--- a/_posts/2021-11-21-职务任命.md
+++ b/_posts/2021-11-21-职务任命.md
@@ -5,9 +5,9 @@ subtitle:   时间紧急，暂时不能翻译为哈儿语
 date:       2021-11-21
 author:     Haer Labotiy Sovet Yemanpolitikapetasiy
 header-img: img/uf2.png
-catalog: true
+catalog: false
 tags:
-    - 命令-Команда
+    - 命令
 ---
 
 哈儿实验室苏维埃主席行政团令：  
