--- a/_posts/2021-12-07-哈儿实验室06分部危险哈儿销毁通知书公示.md
+++ b/_posts/2021-12-07-哈儿实验室06分部危险哈儿销毁通知书公示.md
@@ -5,9 +5,9 @@ subtitle:   哈儿实验室06分部关于销毁危险哈儿团“本源党”的
 date:       2021-12-7
 author:     Haer Labotiy 06 Foreton Sovet
 header-img: img/SSRs.png
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 参见哈儿实验室06分部对危险哈儿团“[本源党](https://hssrgov.github.io/access/index.html?haer=35)”的销毁通知书。
