--- a/_posts/2021-12-26-哈儿实验室徽章公布.md
+++ b/_posts/2021-12-26-哈儿实验室徽章公布.md
@@ -5,9 +5,9 @@ subtitle:   Хаер Лаботий Блазон Едимюскяи
 date:       2021-12-26
 author:     Хаер Лаботий Совет Эман
 header-img: img/uf1.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 哈儿实验室徽章公布
