--- a/_posts/2021-12-31-哈儿实验室祝贺全体同志新年快乐.md
+++ b/_posts/2021-12-31-哈儿实验室祝贺全体同志新年快乐.md
@@ -5,9 +5,9 @@ subtitle:   Хаер Лаботий Леккзорова Алак Товарищ
 date:       2021-12-31
 author:     ОпенГ-ккмб
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 哈儿实验室祝贺全体同志新年快乐
