--- a/_posts/2022-01-26-哈儿共产党第三届中央委员会选举完成.md
+++ b/_posts/2022-01-26-哈儿共产党第三届中央委员会选举完成.md
@@ -5,9 +5,9 @@ subtitle:   Хаер Коммюнисм Паритй Генюм Три Сюк О
 date:       2022-1-26
 author:     Недеквоеақинсюфрез
 header-img: img/home-bg-kph.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 哈儿共产党第三届中央委员会选举完成
