--- a/_posts/2022-02-15-哈儿实验室第三届苏维埃选举完成.md
+++ b/_posts/2022-02-15-哈儿实验室第三届苏维埃选举完成.md
@@ -5,9 +5,9 @@ subtitle:   Хаер Лаботий Генюм Три Совет Ролект К
 date:       2022-2-15
 author:     Трексюфрез
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 哈儿实验室第三届苏维埃选举完成
