--- a/_posts/2022-02-16-新哈儿语相关事宜.md
+++ b/_posts/2022-02-16-新哈儿语相关事宜.md
@@ -5,9 +5,9 @@ subtitle:   Абет Нев Хаер Щаяз
 date:       2022-2-16
 author:     Трексюфрез
 header-img: img/uf1.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 新哈儿语相关事宜
