--- a/_posts/2022-05-21-哈儿实验室06分部决定销毁危险哈儿“弹簧猪”.md
+++ b/_posts/2022-05-21-哈儿实验室06分部决定销毁危险哈儿“弹簧猪”.md
@@ -5,9 +5,9 @@ subtitle:   在制定出新哈儿语标准前，哈儿语不会被显示
 date:       2022-5-21
 author:     哈儿实验室06分部危险哈儿销毁区
 header-img: img/home-bg-kph.png
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 哈儿实验室06分部决定销毁危险哈儿“弹簧猪”  
