--- a/_posts/2022-07-08-警告：禁止进入的地区.md
+++ b/_posts/2022-07-08-警告：禁止进入的地区.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
 title:      警告：禁止进入的地区
-subtitle:   
+subtitle:   哈儿苏维埃联邦社会主义共和国最高苏维埃主席团的指令
 date:       2022-7-3
 author:     哈儿苏维埃联邦社会主义共和国最高苏维埃主席团
 header-img: img/home-bg-kph.png
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 来自哈儿苏维埃联邦社会主义共和国最高苏维埃主席团、宾拉托夫萨多斯帕拉德苏维埃社会主义自治共和国最高苏维埃主席团的警告：  
