--- a/_posts/2022-07-21-哈儿共产党公布党旗.md
+++ b/_posts/2022-07-21-哈儿共产党公布党旗.md
@@ -5,9 +5,9 @@ subtitle:   哈儿共产党第三届中央委员会第二次全体会议
 date:       2022-7-21
 author:     哈儿共产党中央委员会
 header-img: img/home-bg-kph.png
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 哈儿共产党第三届中央委员会第二次全体会议于今日闭幕。会议通过了《哈儿共产党关于将国家和平过渡到哈儿苏维埃联邦社会主义共和国的方针》等若干重要文件。  
