--- a/_posts/2022-07-23-哈儿实验室06分部苏维埃主席团批准“FreePhobia”项目.md
+++ b/_posts/2022-07-23-哈儿实验室06分部苏维埃主席团批准“FreePhobia”项目.md
@@ -5,9 +5,9 @@ subtitle:   哈儿实验室06分部苏维埃例行会议
 date:       2022-7-23
 author:     哈儿实验室苏维埃
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 哈儿实验室06分部苏维埃于今日通过了“FreePhobia”项目的相关方案。该项目由ШИЯЧ的诸多居民及哈儿联合提出，并于7月22日由哈儿实验室06分部苏维埃通过。哈儿实验室06分部苏维埃主席团于7月23日对其进行了审查后决定通过。  
