--- a/_posts/2021-10-01-哈儿实验室危险哈儿数据库已上线.md
+++ b/_posts/2021-10-01-哈儿实验室危险哈儿数据库已上线.md
@@ -5,9 +5,9 @@ subtitle:   HLUHD Neŭilav Mu | ХЛУХД Неŷилав Му
 date:       2021-10-1
 author:     Haer Labotiy
 header-img: img/uf1.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 # 中文
