--- a/_posts/2021-12-19-紧急状态结束.md
+++ b/_posts/2021-12-19-紧急状态结束.md
@@ -5,9 +5,9 @@ subtitle:   Декведан Веданз Уоретнех
 date:       2021-12-19
 author:     Хаер Лаботий Совет Эманполитикапетасий
 header-img: img/uf1.jpg
-catalog: true
+catalog: false
 tags:
-    - 命令-Команда
+    - 命令
 ---
 
 # 紧急状态结束
