--- a/_posts/2022-02-20-哈儿苏维埃社会主义共和国第四届最高苏维埃选举完成.md
+++ b/_posts/2022-02-20-哈儿苏维埃社会主义共和国第四届最高苏维埃选举完成.md
@@ -5,12 +5,12 @@ subtitle:   在制定出新哈儿语标准前，哈儿语不会被显示
 date:       2022-2-20
 author:     《光辉》
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
-# 哈儿苏维埃社会主义共和国四届最高苏维埃选举完成
+# 哈儿苏维埃社会主义共和国第四届最高苏维埃选举完成
 &nbsp;&nbsp;&nbsp;&nbsp;哈儿苏维埃社会主义共和国第四届最高苏维埃第一次会议于昨日落幕，会议选举出了新一届哈儿苏维埃社会主义共和国最高苏维埃主席团。新一届新一届哈儿苏维埃社会主义共和国最高苏维埃主席团的成员如下：  
 &nbsp;&nbsp;&nbsp;&nbsp;最高苏维埃主席团主席：**L-9218-73Z**  
 &nbsp;&nbsp;&nbsp;&nbsp;最高苏维埃主席团第一副主席：**L-1917-11S**  
