--- a/_posts/2022-07-22-哈儿实验室苏维埃关于日本批准核污染水排海计划的决议.md
+++ b/_posts/2022-07-22-哈儿实验室苏维埃关于日本批准核污染水排海计划的决议.md
@@ -5,9 +5,9 @@ subtitle:   哈儿实验室苏维埃例行会议
 date:       2022-7-22
 author:     哈儿实验室苏维埃
 header-img: img/home-bg-o.jpg
-catalog: true
+catalog: false
 tags:
-    - 消息-Нев
+    - 消息
 ---
 
 哈儿实验室苏维埃于今日通过了《哈儿实验室对于日本原子能规制委员会正式批准核污染水排海计划一事的鉴定工作方案》，该文件要求对日本原子能规制委员会正式批准核污染水排海计划一事进行调查并对相关人员进行哈儿通用综合能力评定，以决定是否将相关人员纳入哈儿实验室的管理。目前该议案已经提交哈儿实验室苏维埃主席团。  
