添加2条消息并修改之前的链接
rt

--- a/_posts/2021-10-01-哈儿实验室危险哈儿数据库已上线.md
+++ b/_posts/2021-10-01-哈儿实验室危险哈儿数据库已上线.md
@@ -11,10 +11,10 @@ tags:
 ---
 
 # 中文
-[哈儿实验室危险哈儿数据库](https://hssrgov.github.io/access/)已上线，自今日起可以使用。
+[哈儿实验室危险哈儿数据库](https://khayer.cn/access/)已上线，自今日起可以使用。
 
 # Haer Langu
-[Haer Labotiy Uzasni Haer Datv](https://hssrgov.github.io/access/) neŭilav mu, g lis ruhz ruz ŭya.
+[Haer Labotiy Uzasni Haer Datv](https://khayer.cn/access/) neŭilav mu, g lis ruhz ruz ŭya.
 
 # Кирива Хаер Лангу
-[Хаер Лаботиĵ Узасни Хаер Датв](https://hssrgov.github.io/access/) неŷилав му, г лис рухз руз ŷĵа.
+[Хаер Лаботиĵ Узасни Хаер Датв](https://khayer.cn/access/) неŷилав му, г лис рухз руз ŷĵа.
