--- a/_posts/2021-10-24-紧急通知：炼钢党炸平山头.md
+++ b/_posts/2021-10-24-紧急通知：炼钢党炸平山头.md
@@ -12,4 +12,4 @@ tags:
 
 详情参见炼钢党高级领导人**莼恭绫**的记述。
 
-<embed src="https://hssrgov.github.io/files/2021-10-24-001.pdf" width="100%" height="1000px">
+<embed src="https://khayer.cn/files/2021-10-24-001.pdf" width="100%" height="1000px">
