--- a/_posts/2021-11-14-危险哈儿销毁令.md
+++ b/_posts/2021-11-14-危险哈儿销毁令.md
@@ -12,16 +12,16 @@ tags:
 
 # 危险哈儿销毁令
 哈儿实验室苏维埃主席行政团令：  
-&nbsp;&nbsp;&nbsp;&nbsp;经过相关同志的研究，决定于2021年12月31日上午9:00再次尝试销毁第50号危险哈儿：[略感淤怂](https://hssrgov.github.io/access/index.html?haer=50)。
+&nbsp;&nbsp;&nbsp;&nbsp;经过相关同志的研究，决定于2021年12月31日上午9:00再次尝试销毁第50号危险哈儿：[略感淤怂](https://khayer.cn/access/index.html?haer=50)。
 <div style="text-align: right">哈儿实验室苏维埃主席行政团总代表<br>L-1917-11S<br>2021年11月14日</div>
 
 # Uzasni Haer Kitdekvovetina Komanda
 Haer Labotiy Sovet Yemanpolitikapetasiy komanda:  
-&nbsp;&nbsp;&nbsp;&nbsp;Prokhodyashkhi abet tovarishkh d studa, komanda t 2021 lev 12 vlota 31 dlota uzuk 9:00 denove odfohŭy kitdekvovetina genum 50 uzasni haer: [Lüe Ganyusong](https://hssrgov.github.io/access/index.html?haer=50).
+&nbsp;&nbsp;&nbsp;&nbsp;Prokhodyashkhi abet tovarishkh d studa, komanda t 2021 lev 12 vlota 31 dlota uzuk 9:00 denove odfohŭy kitdekvovetina genum 50 uzasni haer: [Lüe Ganyusong](https://khayer.cn/access/index.html?haer=50).
 <div style="text-align: right">Haer Labotiy Sovet Yemanpolitikapetasiy Alaksove<br>L-1917-11S<br>2021 Lev 11 Vlota 14 Dlota</div>
 
 # Узасни Хаер Китдеквоветина Команда
 Хаер Лаботиĵ Совет Ĵеманполитикапетасиĵ команда:  
-&nbsp;&nbsp;&nbsp;&nbsp;Прокходĵасхкхи абет товарисхкх д студа, команда т 2021 лев 12 влота 31 длота узук 9:00 денове одфохŷĵ китдеквоветина генум 50 узасни хаер: [Лÿе Ганĵусонг](https://hssrgov.github.io/access/index.html?haer=50).
+&nbsp;&nbsp;&nbsp;&nbsp;Прокходĵасхкхи абет товарисхкх д студа, команда т 2021 лев 12 влота 31 длота узук 9:00 денове одфохŷĵ китдеквоветина генум 50 узасни хаер: [Лÿе Ганĵусонг](https://khayer.cn/access/index.html?haer=50).
 <div style="text-align: right">Хаер Лаботиĵ Совет Ĵеманполитикапетасиĵ Алаксове<br>Л-1917-11С<br>2021 Лев 11 Влота 14 Длота
 </div>
