--- a/_posts/2021-12-26-哈儿实验室徽章公布.md
+++ b/_posts/2021-12-26-哈儿实验室徽章公布.md
@@ -15,13 +15,13 @@ tags:
 &nbsp;&nbsp;&nbsp;&nbsp;哈儿实验室苏维埃今日通过了集体创作的哈儿实验室徽章，现予公布。
 <div style="text-align: right">哈儿实验室苏维埃主席<br>OpenG-qkmb<br>2021年12月26日</div>
 附录：哈儿实验室徽章  
-![哈儿实验室徽章](https://hssrgov.github.io/files/Haer_Lab-Emblem.png)  
-下载：[PNG格式](https://hssrgov.github.io/files/Haer_Lab-Emblem.png) [SVG格式](https://hssrgov.github.io/files/Haer_Lab-Emblem.svg)
+![哈儿实验室徽章](https://khayer.cn/files/Haer_Lab-Emblem.png)  
+下载：[PNG格式](https://khayer.cn/files/Haer_Lab-Emblem.png) [SVG格式](https://khayer.cn/files/Haer_Lab-Emblem.svg)
 
 # Хаер Лаботий Блазон Едимюскяи
 Хаер Лаботий Совет Эман команда:  
 &nbsp;&nbsp;&nbsp;&nbsp;Хаер Лаботий Совет лис фехию алакверитпета эфидров д Хаер Лаботий Блазон, лис едимюскяи.
 <div style="text-align: right">Хаер Лаботий Совет Эман<br>ОпенГ-ккмб<br>2021 Лев 26 Хдекабре</div>  
 Алиг: Хаер Лаботий Блазон  
-![Хаер Лаботий Блазон](https://hssrgov.github.io/files/Haer_Lab-Emblem.png)  
-Нагрюзова: [PNG Штандарт](https://hssrgov.github.io/files/Haer_Lab-Emblem.png) [SVG Штандарт](https://hssrgov.github.io/files/Haer_Lab-Emblem.svg)
+![Хаер Лаботий Блазон](https://khayer.cn/files/Haer_Lab-Emblem.png)  
+Нагрюзова: [PNG Штандарт](https://khayer.cn/files/Haer_Lab-Emblem.png) [SVG Штандарт](https://khayer.cn/files/Haer_Lab-Emblem.svg)
