--- a/_posts/2022-05-21-哈儿实验室06分部决定销毁危险哈儿“弹簧猪”.md
+++ b/_posts/2022-05-21-哈儿实验室06分部决定销毁危险哈儿“弹簧猪”.md
@@ -12,4 +12,4 @@ tags:
 
 # 哈儿实验室06分部决定销毁危险哈儿“弹簧猪”  
 见附件  
-<embed src="https://hssrgov.github.io/files/killhaermsg-2022-05-21.pdf" width="100%" height="2000px">
+<embed src="https://khayer.cn/files/killhaermsg-2022-05-21.pdf" width="100%" height="2000px">
