--- a/_posts/2022-06-26-哈儿实验室代表提议更改国家名称.md
+++ b/_posts/2022-06-26-哈儿实验室代表提议更改国家名称.md
@@ -28,6 +28,6 @@ tags:
 Санаксме турпинаяс лиѕ 26. датума ритам. Хаер парставји норисес виета ар иерочием шава уз президию, хаер тика ногалинац уз виетас. Пашлаик нетиек зињоц пар киетушајием. Президијс нолэма аптурэт санаксми ун веикт недэљу илгу немиерниеку тиришану виса валсти.  
 <div style="text-align: right">(Авоц: «Радианке», 2022. гада 26. юнијс)</div>  
   
-![哈儿实验室2022年度授章 | Хаер Лабораторй 2022 Гада Балву](https://hssrgov.github.io/files/mid.png)  
+![哈儿实验室2022年度授章 | Хаер Лабораторй 2022 Гада Балву](https://khayer.cn/files/mid.png)  
 <div style="text-align: center">哈儿实验室2022年度授章</div>  
 <div style="text-align: center">Хаер Лабораторй 2022 Гада Балву</div>
