--- a/_posts/2022-07-03-哈儿苏维埃社会主义共和国最高苏维埃的决议.md
+++ b/_posts/2022-07-03-哈儿苏维埃社会主义共和国最高苏维埃的决议.md
@@ -19,5 +19,5 @@ tags:
 会议决定自2022年8月15日起废除现行国歌，并宣布将在2022年8月10日前指定新国歌。  
 <div style="text-align: right">（来自：《光辉》2022年7月3日）</div>  
   
-![哈儿苏维埃联邦社会主义共和国国徽](https://hssrgov.github.io/files/Haerskaya_SFSR-Emblem-1024.png)  
+![哈儿苏维埃联邦社会主义共和国国徽](https://khayer.cn/files/Haerskaya_SFSR-Emblem-1024.png)  
 <div style="text-align: center">哈儿苏维埃联邦社会主义共和国国徽（2022年8月15日——）</div>
