--- a/_posts/2022-07-21-哈儿共产党公布党旗.md
+++ b/_posts/2022-07-21-哈儿共产党公布党旗.md
@@ -16,5 +16,5 @@ tags:
 旗帜宽度与长度的比例为1:2；镰刀锤子应被放置在一个边长为旗帜宽度四分之一的正方形内；镰刀的最高处与此正方形最上边正中相切，锤柄与镰刀柄与正方形下面两角边相切；锤子连同把手的长度为此正方形对角线长度的四分之三；五角星位于一个直径为旗帜宽度八分之一的圆中，圆与正方形在其上边正中相切；五角星、镰刀锤子的对称轴距离旗杆的距离为旗帜宽度的三分之一；五角星中心距离旗帜上边为旗帜宽度的八分之一。  
 任何情况下使用哈儿共产党党旗时必须遵守：不得以任何方式侮辱、毁坏哈儿共产党党旗。任何时刻展示哈儿共产党党旗时必须按照哈儿实验室给出的标准文件为准。  
   
-![哈儿共产党党旗](https://hssrgov.github.io/files/KPH.png)  
+![哈儿共产党党旗](https://khayer.cn/files/KPH.png)  
 <div style="text-align: center">哈儿共产党党旗</div>
