--- a/_posts/2021-12-07-哈儿实验室06分部危险哈儿销毁通知书公示.md
+++ b/_posts/2021-12-07-哈儿实验室06分部危险哈儿销毁通知书公示.md
@@ -10,6 +10,6 @@ tags:
     - 消息
 ---
 
-参见哈儿实验室06分部对危险哈儿团“[本源党](https://hssrgov.github.io/access/index.html?haer=35)”的销毁通知书。
+参见哈儿实验室06分部对危险哈儿团“[本源党](https://khayer.cn/access/index.html?haer=35)”的销毁通知书。
 
-<embed src="https://hssrgov.github.io/files/killhaermsg-2021-12-04.pdf" width="100%" height="1000px">
+<embed src="https://khayer.cn/files/killhaermsg-2021-12-04.pdf" width="100%" height="1000px">
