--- a/_posts/2022-02-15-哈儿实验室第三届苏维埃选举完成.md
+++ b/_posts/2022-02-15-哈儿实验室第三届苏维埃选举完成.md
@@ -17,5 +17,5 @@ tags:
 &nbsp;&nbsp;&nbsp;&nbsp;苏维埃主席行政团总代表：**L-1917-11S**  
 &nbsp;&nbsp;&nbsp;&nbsp;苏维埃主席行政团委员：**S-1945-08P**等21人  
 &nbsp;&nbsp;&nbsp;&nbsp;另外，在此前的选举中，**F-9182-00L**同志任哈儿实验室01分部苏维埃主席，**K-2510-51Y**同志任哈儿实验室04分部苏维埃主席，**D-2530-60U**同志任哈儿实验室06分部苏维埃主席。在此次会议中，01分部、04分部及06分部被设为哈儿实验室重要分部。  
-&nbsp;&nbsp;&nbsp;&nbsp;会议选举出哈儿实验室危险哈儿管制及实验区主席为**L-9218-73Z**同志，其作为[半个危险哈儿](https://hssrgov.github.io/hluhd/index.html?haer=6)管理危险哈儿，能够更贴近危险哈儿们的心灵，极大地提升了哈儿实验室对危险哈儿的约束力。
+&nbsp;&nbsp;&nbsp;&nbsp;会议选举出哈儿实验室危险哈儿管制及实验区主席为**L-9218-73Z**同志，其作为[半个危险哈儿](https://khayer.cn/hluhd/index.html?haer=6)管理危险哈儿，能够更贴近危险哈儿们的心灵，极大地提升了哈儿实验室对危险哈儿的约束力。
 <div style="text-align: right">（来自：《真理》2022年2月15日）</div>
