--- a/_posts/2022-08-22-马人窗台口被鉴定为化学物质型危险哈儿.md
+++ b/_posts/2022-08-22-马人窗台口被鉴定为化学物质型危险哈儿.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "马人窗台口被鉴定为化学物质型危险哈儿"
-subtitle:   "Лаборатория Хаера Объявляет о Блокировке Подоконника Кентавров"
+subtitle:   "Подоконник Кентавра идентифицирован как Абиотический Хаер"
 date:       2022-08-22 23:00:00
 author:     "哈儿实验室危险哈儿管制及实验区"
 catalog: false
