--- a/_posts/2022-09-02-炼钢党人炸死摄影师.md
+++ b/_posts/2022-09-02-炼钢党人炸死摄影师.md
@@ -11,8 +11,8 @@ tags:
   - 消息
 ---
 
-2日上午，哈儿实验室06分部雇佣了一名战地摄影师对一名处于暗室中的即将开始炼钢的[炼钢党](https://khayer.cn/bdohlh/index.html?haer=19)人进行每秒500帧的摄像活动，随后该炼钢党人发出巨大的能量，致使摄影师当场身亡，并成功传回3帧图像。该名炼钢党人在炼钢结束后以气体形式离开暗室。  
-哈儿实验室06分部为该名摄影师举行了隆重的葬礼，并将该名摄影师被汽化后产生的气体的残余物降温加压固化后下葬。哈儿实验室06分部苏维埃主席团为其颁发了“社会主义劳动英雄”勋章及“哈儿实验室英雄工作者”称号。  
+2日上午，哈儿实验室06分部雇佣了一名战地摄影师对一名处于暗室中的即将开始炼钢的[炼钢党](https://khayer.cn/bdohlh/index.html?haer=19)人进行每秒500帧的摄像活动，随后该炼钢党人释放出巨大的能量，致使摄影师当场身亡，并成功传回3帧图像。该名炼钢党人在炼钢结束后以气态形式离开暗室。  
+哈儿实验室06分部为该名摄影师举行了隆重的葬礼，并将该名摄影师被汽化和升华后产生的气体的残余物降温加压凝华后置于安瓿中下葬。哈儿实验室06分部苏维埃主席团为其颁发了“社会主义劳动英雄”勋章及“哈儿实验室英雄工作者”称号。  
 哈儿实验室06分部工作人员对图像进行了分析，认为第一张图片中的人形物体为该名炼钢党人的等离子态形式。这对于哈儿实验室研究炼钢党的工作有巨大作用。  
 附：摄影师传回的3帧图像  
 ![该名摄影师的遗作-01](https://khayer.cn/img/msgimg/2022_09_02-1.png)  
