--- a/_posts/2022-11-27-活动：发现身边的非人类.md
+++ b/_posts/2022-11-27-活动：发现身边的非人类.md
@@ -5,7 +5,7 @@ subtitle:   "Упражнение: Откройте для Себя Нечело
 date:       2022-11-27 10:30:00
 author:     "哈儿实验室外事活动部"
 catalog: false
-header-img: "img/sssr35.jpg"
+header-img: "img/ddr2.jpg"
 header-mask: 0
 tags:
   - 通知
