--- a/_posts/2022-11-27-活动：发现身边的非人类.md
+++ b/_posts/2022-11-27-活动：发现身边的非人类.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "活动：发现身边的非人类"
-subtitle:   "Упражнение: Откройте для Себя Нечеловеческих Существ Вокруг Вас"
+subtitle:   "Упражнение: Откройте Для Себя Нечеловеческих Существ Вокруг Вас"
 date:       2022-11-27 10:30:00
 author:     "哈儿实验室外事活动部"
 catalog: false
