--- a/_posts/2022-12-06-哈儿实验室网站逐步恢复页面颜色.md
+++ b/_posts/2022-12-06-哈儿实验室网站逐步恢复页面颜色.md
@@ -11,5 +11,5 @@ tags:
   - 消息
 ---
 
-6日下午至晚间啊，哈儿实验室结束悼念，哈儿实验室网站逐步恢复页面颜色。
+6日下午至晚间，哈儿实验室结束悼念，哈儿实验室网站逐步恢复页面颜色。
 <div style="text-align: right">（来自：《真理》2022年12月6日）</div>
