添加一条消息
rt

--- a/_posts/2022-12-29-养老院内发生雷暴.md
+++ b/_posts/2022-12-29-养老院内发生雷暴.md
@@ -12,6 +12,6 @@ tags:
 ---
 
 29日上午，ШИЯЧ地区内的一所名为“炼钢乐园”的养老院中发生一起雷暴，事故造成6人轻伤。此事故系在该养老院中义务劳动的哈儿错误的操作所致。  
-据了解，这些哈儿错误地在建筑物内燃放烟花爆竹，触发了消防喷淋系统，并炸断了被这些哈儿违规安装在屋顶下方的高压明线。随后建筑物内雷雨交加，带高压电的水雾袭击了6名路过的正在散步的年长的炼钢党员，致其轻伤，并导致该6人狂欢了数小时。此次事故导致该养老院的建筑遭到毁灭性打击。为确保安全，哈儿实验室工作人员于29日中午将该建筑彻底拆毁，并将养老院内的人员疏散至哈儿实验室06分部危险哈儿管制及实验区。目前，被疏散的人员已经快开始接受哈儿实验室06分部危险哈儿管制及实验区的管制。  
+据了解，这些哈儿错误地在建筑物内燃放烟花爆竹，触发了消防喷淋系统，并炸断了被这些哈儿违规安装在屋顶下方的高压明线。随后建筑物内雷雨交加，带高压电的水雾袭击了6名路过的正在散步的年长的炼钢党员，致其轻伤，并导致该6人狂欢了数小时。此次事故导致该养老院的建筑遭到毁灭性打击。为确保安全，哈儿实验室06分部的工作人员于29日中午将该建筑彻底拆毁，并将养老院内的人员疏散至哈儿实验室06分部危险哈儿管制及实验区。目前，被疏散的人员已经开始接受哈儿实验室06分部危险哈儿管制及实验区的管制。  
 事发后，肇事哈儿迅速逃离现场，并企图掩盖自己的错误，随后被哈儿实验室06分部武装力量控制。29日中午，这些哈儿已被全部销毁。
 <div style="text-align: right">（来自：《真理》2022年12月29日）</div>
