--- a/_posts/2023-01-07-哈儿实验室最高苏维埃表决通过了《哈儿实验室章程》.md
+++ b/_posts/2023-01-07-哈儿实验室最高苏维埃表决通过了《哈儿实验室章程》.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "哈儿实验室最高苏维埃表决通过了《哈儿实验室章程》"
-subtitle:   "Верховный Совет Лаборатории Хаэра проголосовал за принятие «Конституции Лаборатории Хаэра»"
+subtitle:   "Верховный Совет Лаборатории Хаера проголосовал за принятие «Конституции Лаборатории Хаера»"
 date:       2023-01-07 15:00:00
 author:     "哈儿实验室最高苏维埃"
 catalog: false
