--- a/_posts/2023-01-08-哈儿实验室最高苏维埃主席团宣布一项决议无效.md
+++ b/_posts/2023-01-08-哈儿实验室最高苏维埃主席团宣布一项决议无效.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "哈儿实验室最高苏维埃主席团宣布一项决议无效"
-subtitle:   "Президиум Верховного Совета Лаборатории Хаера признал постановление недействительным."
+subtitle:   "Президиум Верховного Совета Лаборатории Хаера признал постановление недействительным"
 date:       2023-01-08 16:30:00
 author:     "哈儿实验室最高苏维埃主席团"
 catalog: false
