--- a/_posts/2023-01-05-哈儿实验室司法机关受到批评.md
+++ b/_posts/2023-01-05-哈儿实验室司法机关受到批评.md
@@ -14,7 +14,7 @@ tags:
 5日上午，属于哈儿实验室最高苏维埃的哈儿实验室人民监督委员会宣布哈儿实验室最高独立人民法院于4日进行了一次不文明的审判，并对其进行了口头批评。  
 据悉，该案件的具体经过为哈儿实验室下辖地区内的谢苗诺夫斯基市苏维埃主席团于12月20日通过了一项名为《在就医过程中增进相关各方文明和感悟的决定》的决议，宣布该市内一切医疗机构收治一切病人时均应为每位病人举行时长通常超过六个小时的所谓的“就医仪式”。在该“仪式”中，病人必须站立于讲台前并以中等语速精神饱满地发表关于就医的感言，时长不得低于3小时；之后该医疗机构的相关医务工作者要以同样的方式发表关于收治该病人的感言，时长不得低于2小时；最后医疗机构内全体病人和医务工作者要组织“阅兵式”、“分列式”和“群众游行”以庆祝该病人生病入院。在完成上述流程后，该病人才有权被救治。  
 该决议发布后，立即引发谢苗诺夫斯基市各界人士的一致强烈反对。谢苗诺夫斯基市在12月20日至28日爆发了2000余次游行示威，但谢苗诺夫斯基市军事委员会动用了驻谢苗诺夫斯基市的哈儿实验室武装内务部队镇压。谢苗诺夫斯基市当局指挥哈儿实验室武装内务部队采用暴力方法攻占拒绝执行该决议的各种医疗机构，造成极大的伤亡，30余所医疗机构被夷为平地，200余所医疗机构的建筑被焚烧至成为危房。在12月20日至28日期间，超过600人因该决议而错过从疾病中生还的机会，约2000人因该决议错过最佳治疗时机而终身残疾。  
-为应对该情况，哈儿实验室苏维埃主席团发布命令，宣布上述决议无效，并解散谢苗诺夫斯基市苏维埃、军事委员会及市政府，但谢苗诺夫斯基市方面拒绝承认该命令的有效性，随即动用哈儿实验室武装内务部队轰炸了谢苗诺夫斯基市的司法机关的驻地。基于此，哈儿实验室苏维埃批准哈儿实验室最高独立人民法院和最高独立人民检察院代行谢苗诺夫斯基市独立人民法院和独立人民检察院的职权。2日，哈儿实验室最高独立人民检察院将谢苗诺夫斯基市苏维埃主席团、谢苗诺夫斯基市军事委员会和谢苗诺夫斯基市政府的多名涉事官员起诉至哈儿实验室最高独立人民法院。  
+为应对该情况，哈儿实验室最高苏维埃主席团发布命令，宣布上述决议无效，并解散谢苗诺夫斯基市苏维埃、军事委员会及市政府，但谢苗诺夫斯基市方面拒绝承认该命令的有效性，随即动用哈儿实验室武装内务部队轰炸了谢苗诺夫斯基市的司法机关的驻地。基于此，哈儿实验室最高苏维埃批准哈儿实验室最高独立人民法院和最高独立人民检察院代行谢苗诺夫斯基市独立人民法院和独立人民检察院的职权。2日，哈儿实验室最高独立人民检察院将谢苗诺夫斯基市苏维埃主席团、谢苗诺夫斯基市军事委员会和谢苗诺夫斯基市政府的多名涉事官员起诉至哈儿实验室最高独立人民法院。  
 2日上午，哈儿实验室最高独立人民法院不文明地采用了不通知被告及被告辩护律师、被告及被告辩护律师不出席的快速审判的方式，开庭不足10分钟即宣布判处被起诉的诸官员死刑，并默认被告完全服从判决。2日中午，哈儿实验室武装内务部队决定采用偷袭的方式完成判决的执行，并越级指示驻谢苗诺夫斯基市的哈儿实验室武装内务部队停止执行谢苗诺夫斯基市军事委员会的命令。2日14时，驻谢苗诺夫斯基市的哈儿实验室武装内务部队全部停止执行谢苗诺夫斯基市军事委员会的命令并直接受哈儿实验室军事委员会的领导。2日17时，驻谢苗诺夫斯基市的哈儿实验室武装内务部队采用刺杀的方法执行了对上述官员的死刑。当谢苗诺夫斯基市当局要求当地医院抢救因被执行死刑而生命垂危的官员时，医院的医护人员按照这些官员通过的决议里规定的程序为其举办了“就医仪式”，导致这些官员在仪式中途当场死亡。  
 3日，哈儿实验室宣布恢复对谢苗诺夫斯基市的绝对控制，重新组建了在谢苗诺夫斯基市的各哈儿实验室组织，立即开展重建工作，并逮捕了剩余的参与此次事件的官员。  
 哈儿实验室人民监督委员会对此表示，行使正义时应当在条件允许的情况下尽可能地采取文明的方式。哈儿实验室最高独立人民法院表示其将适当改正错误并从中吸取相应的教训。  
