--- a/_posts/2023-01-21-哈儿实验室最高苏维埃主席团发布中国农历新年祝贺.md
+++ b/_posts/2023-01-21-哈儿实验室最高苏维埃主席团发布中国农历新年祝贺.md
@@ -13,5 +13,5 @@ tags:
 
 21日，哈儿实验室最高苏维埃主席团发布了中国农历新年祝贺，并通过多种渠道向哈儿实验室下辖地区内的全体行政个体放送。哈儿实验室外事活动部也通过网络渠道对外发布了哈儿实验室最高苏维埃主席团的祝贺。  
 附：哈儿实验室最高苏维埃主席团于2023年的农历新年贺词
-<video width="85%" poster="https://khayer.cn/img/home-bg.jpg" controls="controls"><source src="https://github.com/hssrgov/files/raw/main/newyear/2023-lunar-smallest.mp4"></video>
+<div style="text-align: center"><video width="85%" poster="https://khayer.cn/img/home-bg.jpg" controls="controls"><source src="https://github.com/hssrgov/files/raw/main/newyear/2023-lunar-smallest.mp4"></video></div>
 <div style="text-align: right">（来自：《真理》2023年1月21日）</div>
