--- a/_posts/2023-01-24-哈儿实验室中央职务调整.md
+++ b/_posts/2023-01-24-哈儿实验室中央职务调整.md
@@ -11,5 +11,5 @@ tags:
   - 消息
 ---
 
-24日，哈儿实验室第四届最高苏维埃召开第三次会议，批准**ОпенГ-ккмб**同志因健康原因辞去哈儿实验室最高苏维埃主席团主席一职的申请，并决定任命**А-8139-21Б**同志为哈儿实验室最高苏维埃主席团主席；会议决定任命**ОпенГ-ккмб**同志为哈儿实验室内务部主席，并免去**А-8139-21Б**同志哈儿实验室内务部主席的职务；会议还决定任命**ОпенГ-ккмб**同志为哈儿实验室部长会议第一副主席，并免去**И-3484-09Я**同志部长会议第一副主席的职务。
+24日，哈儿实验室第四届最高苏维埃主席团召开第三次会议，批准**ОпенГ-ккмб**同志因健康原因辞去哈儿实验室最高苏维埃主席团主席一职的申请，并决定任命**А-8139-21Б**同志为哈儿实验室最高苏维埃主席团主席；会议决定任命**ОпенГ-ккмб**同志为哈儿实验室内务部主席，并免去**А-8139-21Б**同志哈儿实验室内务部主席的职务；会议还决定任命**ОпенГ-ккмб**同志为哈儿实验室部长会议第一副主席，并免去**И-3484-09Я**同志部长会议第一副主席的职务。
 <div style="text-align: right">（来自：《真理》2023年1月24日）</div>
