--- a/_posts/2023-01-30-哈儿实验室外事活动部决定扩大对外宣传.md
+++ b/_posts/2023-01-30-哈儿实验室外事活动部决定扩大对外宣传.md
@@ -12,5 +12,5 @@ tags:
 ---
 
 30日，哈儿实验室外事活动部召开全体会议，并决定在今后的工作中不断扩大对外宣传。  
-哈儿实验室外事活动部主席**Ш-6701-48Я**同志表示，哈儿实验室不应当处于一个对外封闭的状态。哈儿实验室外事活动部将在哈儿实验室最高苏维埃主席团主席的直接指导下尝试性地通过互联网等渠道对外发布介绍哈儿实验室的内容，并宣传哈儿实验室的各项精神与思想。在对外宣传逐步进入稳定后，哈儿实验室外事活动部将根据实际情况进一步加强和巩固对外宣传。  
+哈儿实验室外事活动部主席**Ш-6701-48Я**同志表示，哈儿实验室不应当处于一个对外封闭的状态。哈儿实验室外事活动部将在哈儿实验室最高苏维埃主席团的直接指导下尝试性地通过互联网等渠道对外发布介绍哈儿实验室的内容，并宣传哈儿实验室的各项精神与思想。在对外宣传逐步进入稳定后，哈儿实验室外事活动部将根据实际情况进一步加强和巩固对外宣传。  
 <div style="text-align: right">（来自：《真理》2023年1月30日）</div>
