--- a/_posts/2023-03-18-哈儿实验室改组成立五周年.md
+++ b/_posts/2023-03-18-哈儿实验室改组成立五周年.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "哈儿实验室改组成立五周年"
-subtitle:   "Реорганизация Лаборатории Хаера празднует свою пятую годовщину"
+subtitle:   "Лаборатория Хаера пятая годовщина реструктуризации"
 date:       2023-03-18 09:30:00
 author:     "哈儿实验室部长会议"
 catalog: false
