--- a/_posts/2023-05-21-哈儿优秀文学作品展示（2023年5月21日）.md
+++ b/_posts/2023-05-21-哈儿优秀文学作品展示（2023年5月21日）.md
@@ -13,11 +13,11 @@ tags:
 
 本文来自《思想与精神》第三卷 《开荒的思想》章节 第二篇《礼貌的思想》。
 <div style="text-align: center"><h1>礼貌的思想</h1></div>
-&ensp;&ensp;亲爱的提季提孩子：  
+亲爱的提季提孩子：  
 &ensp;&ensp;收到您的信件，我感到万分恐惧和痛苦。您在寄给我的信件里用粗鄙而丑恶的语言对我实施了疯狂的侮辱，因此，我写一封信给您以表达我对您发自内心的憎恶与痛恨。  
 &ensp;&ensp;首先，您的言语是如此粗鄙，以至于我无法阻止自己在阅读您的信件时摔打物品。您的言论荒谬而令人作呕，这使得我无法正视您。其次，您的信件不仅让我感到痛苦，而且还让我的宠物感到痛苦。当我朗诵您的信件时，我的宠物陷入了深度昏迷。最后但同样重要的是，您的言语给予我用锤子敲击您的头脑的力量。您优美的辞藻激励着我摧毁您的头盖骨。  
 &ensp;&ensp;如果您能让我用锤子敲击您的头脑，我将不胜感激。请回信给我以回答您是否愿意亲自来到我家接受敲击。如果您不愿意，我将上门服务。  
 &ensp;&ensp;期待您的回信！  
 <div style="text-align: right">您真诚的，
-<br>小哈儿</div>
+<br>小哈儿&nbsp;&nbsp;</div>
 <div style="text-align: right">（来自：《思想与精神》第三卷）</div>
