--- a/_posts/2023-06-03-《思想与精神》受到表彰.md
+++ b/_posts/2023-06-03-《思想与精神》受到表彰.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "《思想与精神》受到表彰"
-subtitle:   "Серия чтений «Разум и Дух» удостоена награды"
+subtitle:   "Серия чтений «Мысль и Дух» удостоена награды"
 date:       2023-06-03 14:00:00
 author:     "哈儿实验室最高苏维埃主席团"
 catalog: false
