--- a/_posts/2023-07-25-哈儿实验室人事调动.md
+++ b/_posts/2023-07-25-哈儿实验室人事调动.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "哈儿实验室最高苏维埃主席团推进改革"
+title:      "哈儿实验室人事调动"
 subtitle:   "Перевод персонала в Лаборатории Хаера"
 date:       2023-07-25 23:55:00
 author:     "哈儿实验室部长会议主席团"
