--- a/_posts/2023-09-09-哈儿实验室主要负责同志简历.md
+++ b/_posts/2023-09-09-哈儿实验室主要负责同志简历.md
@@ -65,7 +65,7 @@ tags:
 2021年12月至2022年12月任哈儿实验室03分部苏维埃主席团主席；  
 2022年12月至今任哈儿实验室03分部最高苏维埃主席团主席兼军事委员会主席。
 
-* 谢尔盖·尤里耶维奇·扎姆哈里扬（Сергей Юрьевич Жамхарян），人类，编号**К-2510-51Й**，1991年6月生，现任04分部最高苏维埃主席团主席兼军事委员会主席。  
+* 谢尔盖·尤里耶维奇·扎姆哈里扬（Сергей Юрьевич Жамхарян），人类，编号**К-2510-51Й**，1991年6月生，现任哈儿实验室04分部最高苏维埃主席团主席兼军事委员会主席。  
 2019年11月至2022年12月任哈儿实验室04分部苏维埃主席团主席；  
 2022年12月至今任哈儿实验室04分部最高苏维埃主席团主席兼军事委员会主席。
 
