--- a/_posts/2023-09-24-哈儿实验室人事调动.md
+++ b/_posts/2023-09-24-哈儿实验室人事调动.md
@@ -13,5 +13,5 @@ tags:
 
 24日，哈儿实验室部长会议主席**Л-1917-11С**同志签署命令，决定进行人事任免。  
 命令决定，任命**М-5194-82Т**同志为哈儿实验室内务部主席；任命**Ю-8639-47Т**同志为哈儿实验室内务部副主席；任命**Н-9382-64К**同志为哈儿实验室内务部候补副主席。  
-命令决定，免去**ОпенГ-ккмб**同志兼任的哈儿实验室内务部主席职务；免去**М-5194-82Т**同志哈儿实验室内务部副主席职务；免去**Ю-8639-47Т**同志哈儿实验室内务部候补副主席职务。
+命令决定，免去**ОпенГ-ккмб**同志兼任的哈儿实验室内务部主席职务；免去**М-5194-82Т**同志的哈儿实验室内务部副主席职务；免去**Ю-8639-47Т**同志的哈儿实验室内务部候补副主席职务。
 <div style="text-align: right">（来自：《真理》2023年9月24日）</div>
