--- a/_posts/2023-10-02-哈儿引发爆炸.md
+++ b/_posts/2023-10-02-哈儿引发爆炸.md
@@ -14,5 +14,5 @@ tags:
 2日，哈儿实验室04分部下辖地区第53号未命名哈儿聚居区内的多名哈儿引发了加油站的剧烈爆炸。  
 2日下午，哈儿实验室04分部下辖地区第53号未命名哈儿聚居区内的多名哈儿违反[相关规定](https://khayer.cn/2023/09/16/%E9%80%9A%E7%9F%A5-%E8%AF%B7%E6%B3%A8%E6%84%8F%E9%A3%9F%E5%93%81%E5%AE%89%E5%85%A8/)私自前往其居所附近的加油站购买汽油以饮用。这些哈儿到达加油站后，被加油站的工作人员告知其因违反相关规定而面临被销毁的风险。随后，违反规定的哈儿开始大喊大叫，并不受控制地在加油站内四处奔跑。当加油站的工作人员决定采取措施控制这些哈儿时，这些哈儿的头部突然炸裂，形成的裂口中喷出大量火焰，点燃了加油站内的散装汽油。  
 2日18时许，加油站的工作人员及加油站附近的人类和哈儿在尝试灭火失败后在哈儿实验室04分部紧急情况部工作人员的建议下撤离了该地。18时38分，加油站发生剧烈爆炸，使其周围的场地和道路严重受损。哈儿实验室紧急情况部队的人员在火势减小后进入该地实施了灭火和救援工作。21时，哈儿实验室紧急情况部队的人员宣布，喷火的哈儿在爆炸中很可能均已化为气态。  
-2日20时，哈儿实验室04分部管制实验部主席**Б-7129-21Г**同志召开了紧急会议，宣布对该事件开展调查。目前，哈儿实验室04分部部长会议主席**К-2201-84Б**同志已经到达现场对相关工作进行指导。
+2日20时，哈儿实验室04分部管制实验部主席**Б-7129-21Г**同志召开了紧急会议，宣布对该事件开展调查。目前，哈儿实验室04分部部长会议主席**К-2201-84Б**同志和哈儿实验室内务部副主席**Ю-8639-47Т**同志已经到达现场对相关工作进行指导。
 <div style="text-align: right">（来自：《真理》2023年10月2日）</div>
