--- a/_posts/2023-10-14-罪大恶极：破坏者的无耻行动.md
+++ b/_posts/2023-10-14-罪大恶极：破坏者的无耻行动.md
@@ -24,5 +24,5 @@ tags:
 哈儿实验室02分部被哈儿实验室军事委员会[接管](https://khayer.cn/2023/08/30/%E5%93%88%E5%84%BF%E5%AE%9E%E9%AA%8C%E5%AE%A402%E5%88%86%E9%83%A8%E8%A2%AB%E6%8E%A5%E7%AE%A1/)后，**И-7189-72Л**同志认识到自己的错误，向哈儿实验室政治安全部交代了其犯罪事实，并主动[放](https://khayer.cn/2023/09/01/%E5%93%88%E5%84%BF%E5%AE%9E%E9%AA%8C%E5%AE%A402%E5%88%86%E9%83%A8%E5%8F%97%E5%88%B0%E6%89%B9%E8%AF%84/)[弃](https://khayer.cn/2023/09/02/%E5%93%88%E5%84%BF%E5%AE%9E%E9%AA%8C%E5%AE%A402%E5%88%86%E9%83%A8%E6%9C%80%E9%AB%98%E8%8B%8F%E7%BB%B4%E5%9F%83%E5%8F%AC%E5%BC%80%E5%85%A8%E4%BD%93%E4%BC%9A%E8%AE%AE/)其职务以接受调查。  
 **И-7189-72Л**同志生活作风不佳，违背了哈儿实验室工作人员应有的道德与操守，为哈儿实验室带来难以挽回的巨大损失，造成相当严重的后果。鉴于**И-7189-72Л**同志主动承认其犯罪事实、积极配合调查及在调查中有重大立功的表现，哈儿实验室最高独立人民检察院根据哈儿实验室政治安全部的建议，决定指定哈儿实验室第七专门委员会对其犯罪行为进行调查。
 
-目前，哈儿实验室第七专门委员会委员长**Л-8440-08К**同志和哈儿实验室第十三专门委员会委员长**З-2859-72Л**同志已经分别召开了专门委员会全体会议，以指定其所承担的调查工作的路线、方针与具体实施办法。
+目前，哈儿实验室第七专门委员会委员长**Л-8440-08К**同志和哈儿实验室第十三专门委员会委员长**З-2859-72Л**同志已经分别召开了专门委员会全体会议，以制定其所承担的调查工作的路线、方针与具体实施办法。
 <div style="text-align: right">（来自：《真理》2023年10月14日）</div>
