--- a/_posts/2023-12-15-饮水的关键步骤在于牛叫.md
+++ b/_posts/2023-12-15-饮水的关键步骤在于牛叫.md
@@ -22,4 +22,8 @@ tags:
 &ensp;&ensp;&ensp;&ensp;当幸福降临在哈儿的土地之上时，我们应当摒弃猜忌、停止斗殴。野猪的内心如此纯洁，而我们更不应该用丑恶的泉水去侮辱它们。我们的目光飞跃井然排列的稿纸，而这稿纸上记载着最古老的契约——这是生命的力量。“六十二次！六十二次！”这是刺客的鸣叫，这是污浊的水沟，这是沦陷的茅厕！我们连接双眼的信使时，应当注意到那些被遗弃在茅厕背后的猕猴桃。  
 &ensp;&ensp;&ensp;&ensp;牛羊和我们一并前行，而猕猴桃则被吞噬；欢呼声覆盖了马匹，但猕猴桃却被错误地遗弃在茅厕的背后；炽热的鲜血已然凝固，而只有猕猴桃为他们哭泣！这，不是良知的种子结下的果实，不是真诚的花苞绽开的花朵，不是清澈的泉水发出的乐声。猕猴桃固定的是人类的希望，而力量的源泉则一步步衰减。这不是人类与哈儿交换头部、连接耳朵的方式。  
 &ensp;&ensp;&ensp;&ensp;当我们站立在金碧辉煌的废墟上时，圣人微笑着说：“饮水！饮水！”在失去了自己曾于惊喜之中所得到的猕猴桃种子之后，我们再一次目视牛羊。“啊！鲜美的牛叫！”我们感叹道。我们面面相觑，但立即微笑着饮水。在生命发出它最强大的力量之时，我们再一次领悟到了这深刻的真理——饮水的关键步骤在于痛苦地牛叫。
+
+![《饮水的关键步骤在于牛叫》（第一页）](https://khayer.cn/img/msgimg/2023_12_15-1.png)
+![《饮水的关键步骤在于牛叫》（第二页）](https://khayer.cn/img/msgimg/2023_12_15-2.png)
+<div style="text-align: center">图1 《饮水的关键步骤在于牛叫》在“牛羊独立国”官方报刊《牛羊的歌声》发表</div>
 <div style="text-align: right">（来自：《真理》2023年12月15日）</div>
